--- a/source/_posts/美朝定下二次“金特会”，释放积极信号.md
+++ b/source/_posts/美朝定下二次“金特会”，释放积极信号.md
@@ -23,3 +23,7 @@ categories:
 美国智库哈德逊研究所高级研究员帕特里克·克罗宁在《外交政策》杂志上撰文说，美朝双方继续相向而行、寻求“折中”途径的可能性依然存在。
  
  
+美股上涨主要在于美联储官员近期密集的讲话释放了一个非常积极的信号。
+王毅介绍，这次会晤气氛友好、坦诚，长达两个半小时，远远超出了预定的时间，双方达成共识，停止加征新的关税。
+国家主席习近平11月30日出席在布宜诺斯艾利斯举行的二十国集团领导人第十三次峰会第一阶段会议，并发表题为《登高望远，牢牢把握世界经济正确方向》的重要讲话。
+通过检索新华社的报道，第一财经记者发现，在不到40天的时间内，至少有5次谈到民营企业，向社会释放了全力支持民企发展的信号。
