--- a/source/_posts/别只盯着黄金，这种商品时隔18年已重登“贵金属之王”宝座.md
+++ b/source/_posts/别只盯着黄金，这种商品时隔18年已重登“贵金属之王”宝座.md
@@ -1,5 +1,5 @@
 ---
-title: 别只盯着黄金,它时隔18年已重登“贵金属之王”
+title: 别只盯着黄金，这种商品时隔18年已重登“贵金属之王”宝座
 author: wetech
 date: 2019-01-20 14:47:30
 tags: 
@@ -27,5 +27,6 @@ categories:
  
  
 全球宏观经济转弱带动贵金属进入上行周期的趋势逻辑越来越清晰，中信建投认为白银的投资机会凸显，涨幅或将跑赢黄金。兴业证券认为国内主要区域销售的柴油货车将提前完成国六排放标准的改造。
+豪华车第一阵营的奥迪、奔驰和宝马的销量集体攀升。
+大众仍是2018年中国车市的赢家，但2019年将是大众的挑战之年。
 虽然新建纯电动乘用车生产企业项目及其余由省级政府核准的汽车投资项目不再实行核准管理，但对新建纯电动汽车企业投资项目的管理更加严格，门槛进一步提高。
-广汽新能源用一款具备世界竞争力的智能座驾Aion S赢得了国际媒体的高度关注和赞誉，被看成是特斯拉的新挑战者。
