--- a/source/_posts/打造长江上游生态屏障，国家在重庆建500万亩储备林基地.md
+++ b/source/_posts/打造长江上游生态屏障，国家在重庆建500万亩储备林基地.md
@@ -1,5 +1,5 @@
 ---
-title: 打造长江上游生态屏障国家投融资340亿在重庆建500万亩储备林基地
+title: 打造长江上游生态屏障，国家在重庆建500万亩储备林基地
 author: wetech
 date: 2019-01-20 13:50:38
 tags: 
@@ -11,7 +11,7 @@ categories:
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/6e4d87fb6062c2a9cd0a2bc36400bad2.jpg" />
 章轲
 位于三峡库区腹心地带的长江上游，将建设500万亩国家储备林基地，打造长江上游重要的生态屏障。
-国家林业和草原局今天（20日）刚刚通报称，国家林草局、重庆市人民政府、国家开发银行当日共同签署《支持长江大保护共同推进重庆国家储备林等林业重点领域发展战略合作协议》，确定投资190亿元，融资150亿元，共340亿，在重庆市先期实施国家储备林基地建设500万亩，打造长江上游重要生态屏障，推进长江经济带生态建设和长江上游生态保护。
+国家林业和草原局今天（20日）刚刚通报称，国家林草局、重庆市人民政府、国家开发银行当日共同签署《支持长江大保护共同推进重庆国家储备林等林业重点领域发展战略合作协议》，确定投资190亿元，其中融资150亿元，在重庆市先期实施国家储备林基地建设500万亩，打造长江上游重要生态屏障，推进长江经济带生态建设和长江上游生态保护。
 重庆地处长江上游，位于三峡库区腹心地带，生态区位非常重要。近年来，重庆市积极开展大规模国土绿化，全面加强天然林保护、退耕还林还草、湿地保护恢复，林业建设和生态保护修复取得重大进展。
 数据显示，重庆市森林覆盖率由直辖初的20.98%提高到46.5%，2018年林业产业总产值突破1200亿元，同比增长15%。重庆市委、市政府确定用3年时间，大规模推进国土绿化提升行动，全市营造林1700万亩，到2022年，全市森林覆盖率达到55%左右。
 《长江经济带生态环境保护规划》提出，建设健康长江。到2020年，长江经济带水源涵养、水土保持等生态功能增强，生物种类多样，自然保护区面积稳步增加，湿地生态系统稳定性和生态服务功能逐步提升。
@@ -26,8 +26,8 @@ categories:
 张建龙表示，三方签订战略合作协议，共同推动重庆林业建设和生态保护修复，更好地落实长江经济带“共抓大保护”战略，具有十分重要的意义，将全面推进方案制定、组织实施、质量提升、资金监管、科技保障、监测评估等环节工作，确保国家储备林项目高效率推进、高质量建设。
  
  
-货币政策仅能保证货币市场的流动性合理充裕，而财政支出由于蕴含着政府信用，是冲破当前货币政策传导梗阻必不可少的力量。
 3年来，共抓长江大保护，修复长江生态环境，确保长江生态环境安全，实现科学发展、有序发展、高质量发展，成为沿江11省市最紧迫的任务。
 张建龙表示，将针对林业草原投入大、周期长、收益低的特点，完善林木采伐和政府补贴政策，稳定投资者收益预期，吸引社会资本增加投资。
 下一步，国家林业和草原局将协调有关部门，按照中央要求，尽快形成《重点国有林区管理体制改革的意见》，报请中央审定。
+目前，长江沿线共布局化工园区62个，正在建设或规划的化工园区有20多个，生产和运输的危化品种类多达250余种。
 石漠化地区人口密度达207人/平方公里，是这一地区理论上最大可承载密度的2倍多。岩溶地区尚有近200个贫困县、1300多万贫困人口，有261.6万公顷石漠化耕地仍在耕种。
