--- a/source/_posts/晚间公告|干货！今日晚间重要公告速读.md
+++ b/source/_posts/晚间公告|干货！今日晚间重要公告速读.md
@@ -1,13 +1,15 @@
 ---
-title: 晚间公告|干货！今日晚间重要公告速读（更新中）
+title: 晚间公告|干货！今日晚间重要公告速读
 author: wetech
 date: 2019-01-20 18:27:55
 tags: 
 categories: 
 ---
-海亮股份披露业绩快报，2018年度实现营业总收入413.8亿元，同比增38.33%，实现净利润9.02亿元，同比增27.91%。
+捷昌驱动公告，公司拟向93名激励对象授予200万股限制性股票，占公司总股本的1.66%。授予价格为20.93元/股。业绩考核条件为：以上一年业绩为基数，2019年-2021年的营业收入增长率分别不低于30%；净利润增长率分别不低于20%。
 <!-- more -->
 1月20日晚间，沪深两市多家上市公司发布公告，以下是重要公告摘要，供投资者参考：
+捷昌驱动公告，公司拟向93名激励对象授予200万股限制性股票，占公司总股本的1.66%。授予价格为20.93元/股。业绩考核条件为：以上一年业绩为基数，2019年-2021年的营业收入增长率分别不低于30%；净利润增长率分别不低于20%。
+智能自控披露业绩快报，公司2018年实现营业总收入3.76亿元，同比增长22.33%；净利润6295.15万元，同比增长32.12%。每股收益0.30元。
 海亮股份披露业绩快报，2018年度实现营业总收入413.8亿元，同比增38.33%，实现净利润9.02亿元，同比增27.91%。
 海亮股份披露业绩快报，公司2018年实现营业总收入413.80亿元，同比增长38.33%；净利润9.02亿元，同比增长27.91%。每股收益0.52元。近5年，公司的净利润复合增长率达25.61%；同时，报告期内公司经营性现金净流入29.73亿元，较上年同期大幅提升。
 深振业A发布业绩快报，2018年度实现营收25.03亿元，同比下降15.42%；实现净利润8.8亿元，同比增长9.88%。
@@ -15,11 +17,19 @@ categories:
 凯利泰公告，预计2018年净利润为4.29亿元-4.87亿元，同比增长120%-150%。若剔除易生科技的整体影响、非经常性损益以及中介费用的影响，2018年度预计净利润在1.88亿元-2.17亿元之间，同比增长约增长30%-50%。此外，公司预计2019年一季度净利润为6353.80万元-7820万元，同比增长30%-60%。
 中国长城公告，预计2018年净利润为8.5亿元-11亿元，同比增长46%-89%。公司利润增长的主要原因：一是产业收入增加使产业利润同比增长；二是通过收购子公司的少数股东股权，加强对相关业务板块的控制，使公司利润有所增加；三是处置金融资产收益同比增加。
 洲明科技公告，预计2018年净利润为4.16亿元-4.62亿元，同比增长46.40%-62.60%。报告期内，公司扎实推进各项经营计划，主营业务快速增长，业务规模不断扩大；同时加强信用政策管理，现金流情况良好，2018年度经营活动产生的现金流量净额约为3.2亿元以上。
+苏交科公告，预计2018年净利润为5.33亿元-6.26亿元，同比增长15%-35%。
+华明装备公告，股东安信乾能本次减持计划已完成。1月15日-17日，股东安信乾能累计减持759.24万股，占公司总股本的1%。
+*ST地矿披露重大事项进展，明确本次股权划转涉及公司股份8535.66万股，占公司总股本16.71%，划出方为山东地矿集团有限公司，划入方为兖矿集团有限公司；划转完成后，公司控股股东将发生变更。
 海鸥住工公告，截至1月18日，公司以集中竞价交易方式累计回购557.55万股，占公司总股本的 1.10%，最高成交价为4.43元/股，最低成交价为3.89元/股，支付的总金额为2390.293万元。
 申万宏源公告，公司正在进行申请公开发行境外上市外资股（H股）并在港交所主板挂牌上市的相关工作。根据本次发行上市的时间安排，公司已于1月17日向港交所递交了本次发行上市的申请，并于1月18日在港交所网站刊登了本次发行上市的申请版本资料集。
 双汇发展公告，公司拟通过向控股股东双汇集团的唯一股东罗特克斯发行股份的方式对双汇集团实施吸收合并。根据目前掌握的情况，本次重组构成重大资产重组。公司股票将自1月21日起停牌，预计停牌时间不超过 10个交易日。
+杰克股份披露第二期员工持股计划，参加本员工持股计划的员工总人数不超过70人，拟筹集资金总额不超过6000万元。
 ST冠福公告，公司收到证监会调查通知书，因公司涉嫌信息披露违法违规，证监会决定对公司立案调查。此外，公司控股股东及实际控制人林福椿、林文昌、林文洪、林文智收到证监会调查通知书。因公司控股股东及实际控制人涉嫌信息披露违法违规，证监会决定对公司控股股东及实际控制人立案调查。
 *ST长生公告，公司目前没有应披露而未披露的事项。目前公司三位实控人中有两位正在配合有关部门调查，公司暂时无法与其取得联系。经问询另一位实控人，其回函表示没有应披露而未披露的重大事项。公司股票于1月16日起复牌，自复牌之日起，深交所将继续对公司股票交易实施退市风险警示,本次复牌后退市风险警示期为三十个交易日。公司股票三十个交易日后存在暂停上市风险。
+荣安地产公告，公司近日收到证监会出具的的批复，核准公司向合格投资者公开发行面值总额不超过6.7亿元的公司债券。
+中信证券公告，公司2019年度第一期短期融资券已于1月18日发行完毕。该短期融资券期限为91天，实际发行总额为20亿元，发行价格100元/张，票面利率2.95%，投标倍率达3.76倍。
+绿茵生态公告，联合预中标南京市浦口区星甸街道九峰山田园综合体PPP项目，项目总投资为9.88亿元。
+日海智能公告，全资子公司日海通服参与了“中国移动2019年至2020年传输管线工程施工服务集中采购项目”投标。日海通服为中国移动广东、西藏、江西、上海和陕西招标项目的多个标段中标候选人之一。如果能够签订以上中标项目的正式项目合同并顺利实施，将有助于扩大日海通服在中国移动的业务规模。
 华业资本公告，公司今日召开了债权人会议，中介机构介绍了公司资产摸底情况，债务重组顾问介绍了债务重组初步方案。此外，公司顺利完成了董事会、监事会的改选工作。公司此前已向政府机关寻求支持，以期帮助企业解决当前流动性困境和债务危机。截至目前，政府已给予公司关注支持，有关部门也给予协调回应。
 闰土股份公告，在停产整改期间，三家子公司采取有效措施积极落实政府相关部门的整改要求。近日，灌云县人民政府向灌云县临港产业园区下发通知，确认江苏远征、江苏明盛已经市、县两级验收，并通过市政府批准，同意复产。江苏远征和江苏明盛正根据复产相关要求组织复产工作，进行试生产，逐步恢复生产。
 贝通信晚间公告，公司参与了“中国移动2019年至2020年传输管线工程施工服务集中采购项目”投标。公司为其中14个省52个标段的中标候选人。预计中标金额共13.3亿元。本项目中标后，其合同的履行将对公司业务稳定发展产生积极作用，对公司2019年-2020年经营业绩有积极影响，且不影响公司经营的独立性。本项目总金额以正式签署的合同为准，可能存在最后金额总量不及预估的情形。
@@ -29,7 +39,7 @@ ST冠福公告，公司收到证监会调查通知书，因公司涉嫌信息披
  
  
 1月16日晚间，沪深两市多家上市公司发布公告，本文是重要公告摘要，供投资者参考。
-有分析认为，QFII总额度再度扩容，短期来看有助于提升市场情绪，外资比重提升有利于A股市场健康发展。
+1月15日晚间，沪深两市多家上市公司发布公告，本文是重要公告摘要，供投资者参考。
 1月13日晚间，沪深两市多家上市公司发布公告，本文是重要公告摘要，供投资者参考。
 1月11日晚间，沪深两市多家上市公司发布公告，以下是重要公告摘要，供投资者参考。
-1月10日晚间，沪深两市多家上市公司发布公告，以下是重要公告摘要，供投资者参考。
+1月4日晚间，沪深两市多家上市公司发布公告，本文是重要公告摘要，供投资者参考。
