--- a/source/_posts/盘前必读丨财政部等实施小微企业普惠性税收减免政策.md
+++ b/source/_posts/盘前必读丨财政部等实施小微企业普惠性税收减免政策.md
@@ -5,28 +5,29 @@ date: 2019-01-21 07:33:17
 tags: 
 categories: 
 ---
-15:00 德国12月PPI
+周一亚洲市场开市，日经225指数开盘涨0.88%，报20848.38点。
 <!-- more -->
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/5795dce2c13c12cd19ef68151420a6d2.jpg" />
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/b71eb7cb907ba73a4390179fee8a7622.jpg" />
 当地时间上周五，欧洲主要股指全线大涨。美股三大股指均涨逾1%。特斯拉股价大跌12.97%，市值报519亿美元，低于通用汽车的544.9亿美元，该股创下近4个月最大单日跌幅，据报道，该公司将削减至多7%的全职人员，此外，将到期的债务或消耗该公司1/3的现金。市场风险情绪趋于缓和，国际金价收跌0.8%。全球原油库存压力趋缓，美油大涨逾3%，创五周新高。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/1115fd943822077aad8679290e0a4854.jpg" />
-15:00 德国12月PPI
+周一亚洲市场开市，日经225指数开盘涨0.88%，报20848.38点。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/cfcd118bb26415c50247e0db9f3f339b.jpg" />
-无
+15:00 德国12月PPI
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/5e2105098e62a5115ad9fa8552536049.jpg" />
 无
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/a8b2c48088c4180bb670bd3e7e901597.jpg" />
-财政部、税务总局18日发布通知，实施小微企业普惠性税收减免政策，对月销售额10万元以下（含本数）的增值税小规模纳税人，免征增值税。对小型微利企业年应纳税所得额不超过100万元的部分，减按25%计入应纳税所得额，按20%的税率缴纳企业所得税；对年应纳税所得额超过100万元但不超过300万元的部分，减按50%计入应纳税所得额，按20%的税率缴纳企业所得税。上述小型微利企业是指从事国家非限制和禁止行业，且同时符合年度应纳税所得额不超过300万元、从业人数不超过300人、资产总额不超过5000万元等三个条件的企业。
+无
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/9d8e2d90a2b37391ca779f15a10018b0.jpg" />
-1月18日，人民银行召开2019年金融法治工作会议。会议强调，今年是人民银行承担拟订银行业、保险业重要法律法规草案和审慎监管基本制度的开局之年。要加快推动《中国人民银行法》《非存款类放贷组织条例》《处置非法集资条例》等履职相关重点立法。认真开展逆周期调节相关制度研究工作，充实货币政策、风险处置工作等方面的工具箱。全面推进法治央行建设。
+财政部、税务总局18日发布通知，实施小微企业普惠性税收减免政策，对月销售额10万元以下（含本数）的增值税小规模纳税人，免征增值税。对小型微利企业年应纳税所得额不超过100万元的部分，减按25%计入应纳税所得额，按20%的税率缴纳企业所得税；对年应纳税所得额超过100万元但不超过300万元的部分，减按50%计入应纳税所得额，按20%的税率缴纳企业所得税。上述小型微利企业是指从事国家非限制和禁止行业，且同时符合年度应纳税所得额不超过300万元、从业人数不超过300人、资产总额不超过5000万元等三个条件的企业。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/3fe87f78bb215979ccf7a8b1a382813c.jpg" />
-银保监会副主席王兆星、曹宇在中国金融杂志撰文提出，进一步扩大对内对外开放。按照“宜早不宜迟，宜快不宜慢”原则，加快落实银行业扩大开放、大幅放宽市场准入的重要举措。紧紧围绕共建“一带一路”，优化中资银行海外布局，提高合规经营水平，在有效防范各类风险的前提下，为促进国际贸易和投资提供市场化专业化金融支持。继续引导民间资本依法合规有序进入银行业，继续推动民营银行常态化发展。推动积极稳妥去杠杆，进一步完善差别化房地产信贷政策，坚决遏制房地产泡沫化，促进防范化解地方政府隐性债务风险。
+1月18日，人民银行召开2019年金融法治工作会议。会议强调，今年是人民银行承担拟订银行业、保险业重要法律法规草案和审慎监管基本制度的开局之年。要加快推动《中国人民银行法》《非存款类放贷组织条例》《处置非法集资条例》等履职相关重点立法。认真开展逆周期调节相关制度研究工作，充实货币政策、风险处置工作等方面的工具箱。全面推进法治央行建设。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/10271f820278a7057d79730f65d39711.jpg" />
-证监会新闻发言人常德鹏18日表示，证监会发布公募基金投资信用衍生品指引，自发布之日起实行。常德鹏表示，指引的主要内容为，一是明确以风险对冲为目的；二是货币市场基金不得投资信用衍生品；三是基金管理人必须明确投资金额、期限等，四是要求定期报告及招募说明书中投资信用衍生品的情况，五是参照行业协会规定估值；六是强化基金管理人职责；七是明确老基金投资信用衍生品必须依法履行适当程序。常德鹏表示，基金管理人要强化风险管理意识，落实好信披要求，证监会将加大监管力度，严厉查处违法违规行为。
+银保监会副主席王兆星、曹宇在中国金融杂志撰文提出，进一步扩大对内对外开放。按照“宜早不宜迟，宜快不宜慢”原则，加快落实银行业扩大开放、大幅放宽市场准入的重要举措。紧紧围绕共建“一带一路”，优化中资银行海外布局，提高合规经营水平，在有效防范各类风险的前提下，为促进国际贸易和投资提供市场化专业化金融支持。继续引导民间资本依法合规有序进入银行业，继续推动民营银行常态化发展。推动积极稳妥去杠杆，进一步完善差别化房地产信贷政策，坚决遏制房地产泡沫化，促进防范化解地方政府隐性债务风险。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/f4dd99291bf40c8ffbd33d6e4012dfed.jpg" />
-2019年全国生态环境保护工作会议18日至19日在北京举行，生态环境部部长李干杰表示，2019年将启动第二轮中央生态环境保护督察。将大力发展生态环保产业。认真落实《打赢蓝天保卫战三年行动计划》。强化区域联防联控，继续实施重点区域秋冬季攻坚行动。深入推进钢铁等行业超低排放改造、“散乱污”企业及集群综合整治、工业炉窑综合整治、重点行业挥发性有机物污染治理。实施《柴油货车污染治理攻坚战行动计划》。
+证监会新闻发言人常德鹏18日表示，证监会发布公募基金投资信用衍生品指引，自发布之日起实行。常德鹏表示，指引的主要内容为，一是明确以风险对冲为目的；二是货币市场基金不得投资信用衍生品；三是基金管理人必须明确投资金额、期限等，四是要求定期报告及招募说明书中投资信用衍生品的情况，五是参照行业协会规定估值；六是强化基金管理人职责；七是明确老基金投资信用衍生品必须依法履行适当程序。常德鹏表示，基金管理人要强化风险管理意识，落实好信披要求，证监会将加大监管力度，严厉查处违法违规行为。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/781b132626e7c57022d1491e8f3a175c.jpg" />
+2019年全国生态环境保护工作会议18日至19日在北京举行，生态环境部部长李干杰表示，2019年将启动第二轮中央生态环境保护督察。将大力发展生态环保产业。认真落实《打赢蓝天保卫战三年行动计划》。强化区域联防联控，继续实施重点区域秋冬季攻坚行动。深入推进钢铁等行业超低排放改造、“散乱污”企业及集群综合整治、工业炉窑综合整治、重点行业挥发性有机物污染治理。实施《柴油货车污染治理攻坚战行动计划》。
 1月18日，国家发展改革委、商务部、国家市场监管总局联合召开优化市场供给促进居民消费电视电话会议。会议强调，着力扩大消费规模。因地制宜促进汽车、家电消费，有条件的地方要加大政策支持力度，满足人民群众对绿色智能新型汽车和家电的消费需求；推动农村消费提质扩容，支持优质工业品下乡。
 1月18日，第二次中德高级别财金对话在北京举行并发布《联合声明》。中德双方一致认同中欧国际交易所的重要市场地位，并就跨境证券发行与监管合作、A股指数衍生品离岸市场建设、资本巿场互联互通等相关话题达成一系列共识。中欧所联席首席执行官陈晗表示，中欧所将在中德双方建立期货市场跨境监管协作的框架下，在法兰克福离岸市场推出A股指数衍生品，为国际投资者提供风险管理工具，支持中国资本市场的进一步对外开放。
 在1月18日举行的中国充电联盟2019年度工作会议上，中国充电联盟理事长董扬在发言时谈到，2019年充电设施产业将迎来最好的一年，各部委已经沟通意见，要求各地方政府不要补车，要补充充电基础设施，要求地方政府出台详细的实施办法。在多种扶持政策推出的情况下，我国充电桩建设速度落后于汽车保有量的增长的现象将逐步改观，民营企业更有望从中短期的海量工程和设备订单中获利。
