--- a/source/_posts/融创与泛海达成交易，上海外滩董家渡项目闲置17年后易主.md
+++ b/source/_posts/融创与泛海达成交易，上海外滩董家渡项目闲置17年后易主.md
@@ -10,7 +10,7 @@ categories:
 张歆晨
 21日早间，融创中国（1918.HK）与泛海控股（000046）双双发布交易公告，称融创集团全资附属公司融创房地产与泛海旗下之武汉中央商务区签订协议，收购泛海下属之上海泛海建设公司100%股权，从而持有北京泛海国际项目1号地块与上海董家渡项目的100%权益。
 收购事项的总代价约为人民币148.87 亿元，其中股权代价约为人民币111.75 亿元，及债权代价约为人民币37.12 亿元。 此外，武汉中央商务区及其关联方欠付目标公司及北京东风约人民币23.34 亿元的债务，总代价与前述债务冲抵后的现金应付代价约为人民币125.53 亿元。
-公告显示，目標公司上海泛海建设公司直接持有上海董家渡项目的100% 权益，且通过北京东风间接持有北京泛海国际项目一号地块100% 权益。融创房地产拟通过受让目标公司100% 股权的方式收购北京项目及上海项目的全部权益。交易完成后，目标公司将成为融创中国的间接全资附属公司。
+公告显示，目标公司上海泛海建设公司直接持有上海董家渡项目的100% 权益，且通过北京东风间接持有北京泛海国际项目一号地块100% 权益。融创房地产拟通过受让目标公司100% 股权的方式收购北京项目及上海项目的全部权益。交易完成后，目标公司将成为融创中国的间接全资附属公司。
 鉴于本公告披露日，目标公司同时持有三家全资附属公司，分别为北京东风、浙江泛海建设投资有限公司(“浙江泛海”)及上海御中投资管理有限公司(“上海御中”)。其中浙江泛海、上海御中的股权将于协议书签署后2 个月内由武汉中央商务区尽快完成剥离。
 同时，目标公司还通过北京东风间接持有3 个地块，分别为北京泛海国际项 目1 号、2 号、3 号地块。其中2 号、3 号地块的全部资产及负债将于协议书签署后24 个月内由武汉中央商务区尽快完成剥离。
 这是融创自收购万达资产包以来最大宗的收购事件，而本次交易的两大项目，均是泛海旗下最核心的地产资产。
