--- a/source/_posts/人民币中间价1月21日下调109点.md
+++ b/source/_posts/人民币中间价1月21日下调109点.md
@@ -15,3 +15,8 @@ categories:
 对于人民币汇率走势，兴业银行首席经济学家鲁政委认为，2019年末预计会比年初总体平稳，今年人民币汇率突破去年低点的可能性不大。
  
  
+人民币中间价报6.8631，下调149点，上一交易日中间价6.8482。
+12月21日，人民币兑美元中间价调升111点，报6.8825。任泽平称，人民币贬值压力有望阶段性缓解。
+12月20日，人民币中间价贬67点，报6.8936。渣打银行预计，美元对人民币在2019年第四季度将达到6.65。
+12月19日，人民币兑美元中间价报6.8869。市场人士认为，近期人民币兑美元汇率可能难升亦难贬，大概率将围绕6.9元一线双向波动。
+12月17日，人民币兑美元中间价下调158点，报6.8908。盛松成表示，人民币需要保“7”，是重要心理关口。
