--- a/source/_posts/我国经济总量首次突破90万亿元，2018年GDP增长6.6.md
+++ b/source/_posts/我国经济总量首次突破90万亿元，2018年GDP增长6.6.md
@@ -1,5 +1,5 @@
 ---
-title: 统计局：中国2018年GDP同比增长6.6
+title: 我国经济总量首次突破90万亿元，2018年GDP增长6.6
 author: wetech
 date: 2019-01-21 10:05:41
 tags: 
@@ -29,8 +29,8 @@ categories:
 总的来看，2018年国民经济继续运行在合理区间，实现了总体平稳、稳中有进。同时也要看到，经济运行稳中有变、变中有忧，外部环境复杂严峻，经济面临下行压力，前进中的问题必须有针对性地解决。2019年，我们要以习近平新时代中国特色社会主义思想为指导，继续抓住并用好重要战略机遇期，坚持稳中求进工作总基调，坚持新发展理念，坚持推动高质量发展，坚持以供给侧结构性改革为主线，继续打好三大攻坚战，着力激发市场活力、需求潜力和内生动力，统筹推进稳增长、促改革、调结构、惠民生、防风险工作，宏观政策要强化逆周期调节，结构性政策要强化体制机制建设，社会政策要强化兜底保障功能，保持经济持续健康发展和社会大局稳定，为全面建成小康社会收官打下决定性基础，向中华人民共和国成立70周年献礼！
  
  
+初步预计，2018年，深圳市生产总值突破2.4万亿元，同比增长7.5％左右，经济总量居亚洲城市前五
+一些大城市在总量规模大的基础上继续保持中高速增长，并且结构更为优化，对中国经济发展起到担当作用。
 江苏GDP首次迈入“9万亿俱乐部”大门；北京GDP首次突破3万亿，成为第二个GDP超过3万亿元的城市。
-北京市第十五届人民代表大会第二次会议在北京会议中心隆重开幕。北京市市长陈吉宁作政府工作报告。
-2018年全年，融创中国实现合约销售金额人民币4649.5亿元（其中，合同销售金额为人民币4608.3亿元，预订销售金额为人民币41.2亿元），同比增长27%。
-宁波也由此成为全国第15个GDP突破万亿大关的城市，也是浙江第二个、长三角地区第六个GDP万亿俱乐部成员。
-2018~2019年中国经济将在新常态下运行在合理区间，就业、物价保持基本稳定，中国经济不会发生硬着陆。
+目前四川经济仍然靠粗放式发展推动，包括所有制结构和产业结构的结构调整还有待改进。
+宁吉喆说，年初提出了经济增长6.5%左右的预期。现在看来这个目标是能够较好实现的。
