--- a/source/_posts/生态环境部回应一财：渤海入海排污口初查情况令人触目惊心.md
+++ b/source/_posts/生态环境部回应一财：渤海入海排污口初查情况令人触目惊心.md
@@ -5,11 +5,11 @@ date: 2019-01-21 14:08:35
 tags: 
 categories: 
 ---
-原来以为唐山地区入渤海的排污口只有4个，但初步排查发现，各类排污口多达近800个，令人触目惊心。
+原来以为唐山地区入渤海的排污口只有4个，但初步排查发现，各类排污口众多，令人触目惊心。
 <!-- more -->
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/99d3f0340617763129e4b0bf2ad6b2ac.jpg" />
 章轲
-原来以为唐山地区入渤海的排污口只有4个，但初步排查发现，各类排污口多达近800个，令人触目惊心。
+原来以为唐山地区入渤海的排污口只有4个，但初步排查发现，各类排污口众多，令人触目惊心。
 1月11日，生态环境部启动渤海地区入海排污口排查整治专项行动，要求“把向渤海排污的每一个‘口子’都查清楚，确保一个不漏。”
 在生态环境部今天（21日）上午举行的例行新闻发布会上，生态环境部新闻发言人、宣教司司长刘友宾在回答第一财经记者提问时表示，此次排查的主要目的是要让那些长期以来“捉迷藏”“躲猫猫”的排污口无处遁形，露出本来面目，接受行政监管，接受公共监督。
 “初查情况的确如你所说，令人触目惊心。”刘友宾介绍，专项行动的工作任务，可以概括为“查、测、溯、治”四项重点。
