--- a/source/_posts/英法美领导人集体缺席，他或将成为达沃斯最耀眼西方政客.md
+++ b/source/_posts/英法美领导人集体缺席，他或将成为达沃斯最耀眼西方政客.md
@@ -1,5 +1,5 @@
 ---
-title: 美英法领导人集体缺席，他一跃成为今年达沃斯“最大牌”西方首脑
+title: 英法美领导人集体缺席，他或将成为达沃斯最耀眼西方政客
 author: wetech
 date: 2019-01-21 16:21:46
 tags: 
@@ -29,6 +29,7 @@ categories:
  
  
 下周英国政府将提交新版脱欧方案，达沃斯全球经济论坛将开幕，美股财报季继续进行。
+受联邦政府“关门”危机影响，美国总统唐纳德·特朗普17日取消美方代表团出席今年世界经济论坛年会的计划。
 白宫发言人桑德斯17日晚表示，特朗普已经取消了美国代表团前往瑞士达沃斯参加世界经济论坛的行程。
 困于内政，法国总统马克龙缺席本年度达沃斯。
 从去年9月中旬开始，“博索纳罗”因素已推动巴西股市上涨了22%。
