--- a/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
+++ b/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
@@ -5,9 +5,11 @@ date: 2019-01-21 18:30:14
 tags: 
 categories: 
 ---
-光大银行披露业绩快报，公司2018年实现营业收入1102.44亿元，同比增长20.03%；净利润336.59亿元，同比增长6.70%。基本每股收益0.61元。截至2018年末，不良贷款率1.59%，与上年末持平。
+中信建投披露非公开发行预案，本次非公开发行数量不超过12.77亿股，募集资金总额不超过130亿元，扣除发行费用后将全部用于补充公司资本金和营运资金，以扩大业务规模，提升公司的市场竞争力和抗风险能力。
 <!-- more -->
 1月21日晚间，沪深两市多家上市公司发布公告，以下是重要公告摘要，供投资者参考：
+中信建投披露非公开发行预案，本次非公开发行数量不超过12.77亿股，募集资金总额不超过130亿元，扣除发行费用后将全部用于补充公司资本金和营运资金，以扩大业务规模，提升公司的市场竞争力和抗风险能力。
+长沙银行披露业绩快报，公司2018年实现营业收入139.41亿元，同比增长14.95%；净利润44.79亿元，同比增长13.94%。基本每股收益1.42元。截至2018年末，不良贷款率1.29%，较上年末上升0.05个百分点。
 光大银行披露业绩快报，公司2018年实现营业收入1102.44亿元，同比增长20.03%；净利润336.59亿元，同比增长6.70%。基本每股收益0.61元。截至2018年末，不良贷款率1.59%，与上年末持平。
 上海建工披露业绩快报，公司2018年实现营业总收入1700.60亿元，同比增长19.69%；净利润27.30亿元，同比增长5.65%。基本每股收益0.29元。
 攀钢钒钛披露2018年度业绩预告，预盈30亿元至32亿元，同比增长248%～271%。报告期内，钒产品市场价格同比上涨；公司钒钛产品销量同比均有一定幅度增长。
@@ -19,23 +21,32 @@ categories:
 阳谷华泰披露2018年度业绩预告，预盈3.56亿元至3.97亿元，同比增长75%-95%。报告期内，公司按照年度经营计划有序推进各项工作，进一步加大产品销售力度，营业收入、净利润较上年同期保持稳定增长。
 宜宾纸业公告，预计2018年的净利润为1.69亿元至1.77亿元，同比增加82%到91%。报告期内，公司收到宜宾市翠屏区征地拆迁服务中心支付的老厂区搬迁补偿款，在扣除对应的帐面价值及相关费用后预计将实现大约2.15亿元收益。
 金石资源公告，预计2018年实现的净利润同比增加70%到90%。公司上年同期盈利7711万元。业绩预增的主要原因是公司萤石产品的销售价格和产品产销量均有所上升。
+东杰智能披露2018年度业绩预告，预盈5850万元–6770万元，同比增长60.06%-85.24%。公司发行股份并购了常州海登赛思涂装设备有限公司，从2018年第二季度起将其纳入公司合并范围，所以2018年累计净利润较上年同期增长。
+安车检测公告，预计2018年盈利盈利1.2亿元-1.28亿元，同比增51.81%-61.93%。营业收入主要来源于机动车检测系统及检测行业联网监管系统的销售。
 坤彩科技公告，预计2018年度实现归属于上市公司股东的净利润为17,703万元到18,883万元，与上年同期相比，增加5,901万元到7,081万元，同比增加50%到60%。
 方大炭素公告，预计2018年实现的净利润与上年同期相比，增加17.97亿元-20.97亿元，同比增加49.64%-57.93%。公司上年同期盈利36.20亿元。
-安车检测公告，预计2018年盈利盈利1.2亿元-1.28亿元，同比增51.81%-61.93%。营业收入主要来源于机动车检测系统及检测行业联网监管系统的销售。
 国风塑业披露2018年度业绩预告，预盈约9500万元，同比增长约58%。公司及时调整生产线搬迁计划和产品结构，实现了薄膜业务以及下属子公司较好的开机率和生产经营的稳定。另外，非经常性损益较上年同期有所增加。
 武进不锈公告，预计2018年实现的净利润同比增加57%左右。公司上年同期盈利1.28亿元。
 高澜股份披露2018年度业绩预告，预盈5775.62万元-6394.59万元，同比增长40%-55%。报告期内，公司围绕年度经营目标和工作计划，稳步推进各项工作。预计非经常性损益对公司净利润的影响金额为1700万元-1900万元。
+正裕工业公告，预计2018年的净利润为9720万元到1.12亿元，同比增加35%到55%。
 星湖科技公告，预计2018年的净利润为4100万元左右，同比扭亏为盈。公司上年同期亏损1.58亿元。
+汇金股份披露2018年度业绩预告，预盈4700万元–5200万元，同比扭亏为盈。公司完成对北京中科拓达科技有限公司70%股权的收购事项，合并报表范围增加，报告期内中科拓达业务保持高速增长，对公司业绩产生显著积极影响。
 三祥新材公告，公司控股股东宁德市汇阜投资有限公司提议2018年度利润分配及资本公积金转增股本预案为每10股转增4股并派现1.5元。
 兴瑞科技公告，实际控制人、董事长张忠良提议2018年度利润分配预案为：向全体股东每10股派发现金股利3元（含税），同时以资本公积金向全体股东每10股转增6股。
+恒康医疗公告，持有6.03%股份的产业振兴投资基金原计划减持2%公司股份。现减持期限届满，产业振兴投资基金未减持公司股份。
+星普医科公告，公司收到实际控制人叶运寿及主要股东刘岳均、马林、刘天尧、徐涛的通知，上述5人分别与青岛盈康医疗投资有限公司签署了《股份转让协议》，拟将其持有的公司29%股权转让给青岛盈康医疗投资有限公司，转让价格为每股11.5元。完成后，盈康医投将成为公司的控股股东、海尔集团将成为公司的实际控制人。
+双箭股份公告，持股9.04%的泰达宏利计划以集中竞价交、大宗交易等方式，减持股份数量合计不超过3875万股，减持比例合计不超总股本的9.04%。截至本公告日，泰达宏利所持股份尚未解除限售，在股份解除限售前，不会减持其所持股份，上述限售股份将于2019年2月11日上市流通。
 科华控股公告，持股11.24%的股东斐君钽晟计划15个交易日后的6个月内，减持不超过800.4万股，即不超过公司总股本的6%。
 美达股份公告，持股4.28%的股东太仓德源，计划以集中竞价、大宗交易、协议转让等方式，减持股份不超过2259.88万股（占总股本4.28%）。
 乐视网公告，全资子公司乐视新生代于2016年7月至2017年4月，与北京文科租赁签署两份《融资租赁合同》，截至2019年1月11日，上述租金余额1.05亿。近日，乐视新生代收到北京文科租赁发出的《还款通知书》。截至目前，乐视新生代未偿还相关应付款项。另外，公司收到深交所通知：鉴于公司在信息披露、规范运作、内部控制等方面存在重大缺陷及风险，公司的持续督导期延长至2019年度。
 中粮地产公告，近日，公司收到国资委下发的《关于加快推动“双百企业”实施综合改革有关事项的通知》，公司已被纳入“双百企业”名单，公司综合改革方案已完成向国务院国有企业改革领导小组办公室备案。
 永鼎股份公告，公司公开发行可转换公司债券的申请获得证监会审核通过。
+和而泰公告，公司公开发行可转换公司债券申请获得证监会发行审核委员会审核通过。
 傲农生物公告，1月12日，农业农村部新闻办公室发布，江苏省泗阳县发生非洲猪瘟疫情。经公司了解，本次发生非洲猪瘟疫情的养殖企业系公司持股10%的参股公司江苏加华。江苏加华对此次疫情造成的生物资产损失能否获得保险理赔表示存在不确定性。江苏加华后续需要按国家有关规定和要求实行一段时间的空场后才能继续恢复养殖生产，其恢复经营的时间目前尚无法准确估计。
 阳光股份公告，日前证监会例行召开的新闻发布会中提及龙英利用内幕信息，交易公司股票而遭受证监会处罚。随后，公司注意到多家媒体对上述新闻进行报道并转载，有市场人员认为公司人员因内幕交易受到处罚。对此，公司表示，龙英本人及其直系亲属、主要社会关系过去及现在均不在公司及公司附属企业任职。截至目前，公司未有任何人员因涉及内幕交易被证监会通报处罚,公司本身亦不存在内幕交易行为。
 宁波热电公告，公司拟与南京高传机电、宁能投资发起设立宁能产业投资基金，基金总规模为8亿元，公司拟以现金方式出资4亿元。基金投资方向主要是新能源和热电类项目。
+林洋能源公告，根据中国南方电网公司在其网站公告的“广州供电局有限公司2019年营销类物资框架招标结果公示”，公司为三相多功能电子式电能表（高稳定）、单相智能电能表（费控）、三相智能电能表（费控）、电能表外置断路器（单相）的中标候选人，预计中标金额约为6910万元。
+宏达股份披露异动公告，除已披露的公司涉及重大民事诉讼终审判决事项外，公司、控股股东、实际控制人不存在应披露而未披露的其他重大事项。
 天广中茂公告，公司、全资子公司中茂园林及全资子公司中茂生物部分银行账户被冻结。本次账户冻结金额占最近一期经审计净资产比例为0.1885%，占最近一期货币资金比例为6.2%。截至目前，公司及子公司上述银行账户被冻结未对公司的日常运营造成实质性影响。
 中牧股份公告，经农业农村部审查，批准了公司控股子公司乾元浩与其他单位联合申报的重组新城疫病毒、禽流感病毒（H9 亚型）二联灭活疫苗（A-VII 株+WJ57 株）为三类新兽药，并核发了《新兽药注册证书》。该产品为符合国内近年鸡新城疫和禽流感（H9亚型）流行趋势的产品，对流行株的感染具有较强的预防能力，具有较高的防疫需求。
 蓝黛传动公告，公司于近日收到中央军委装备发展部颁发的《装备承制单位资格证书》。经审查，公司符合GJB9001B质量管理体系要求，具备装备承制单位资格条件，已注册编入《中国人民解放军装备承制单位名录》。
