--- a/source/_posts/扁舟难泛海——泛海控股148.9亿元出让项目背后的资金之渴.md
+++ b/source/_posts/扁舟难泛海——泛海控股148.9亿元出让项目背后的资金之渴.md
@@ -28,8 +28,7 @@ categories:
 武汉公司事关泛海控股转型，也与泛海控股目前的资金、财务局面密切相关。
 2014年，泛海控股管理层作出企业战略转型的决策，提出在继续发挥现有房地产业务优势的基础上，将公司打造成涵盖金融、房地产、战略投资等业务的综合性控股上市公司。
 这样的转型战略，与泛海系打造的金融王国步伐相符。近年来，泛海系在资本市场纵横捭阖，高举高打，几乎已经拿下所有金融牌照，建立起包括保险、基金、银行、证券、信托等业态在内的庞大的金融帝国。
-同时，泛海控股、中泛控股、泛海系投资的
-、联想控股等，构成了泛海的上市公司矩阵。
+同时，泛海控股、中泛控股、泛海系投资的民生银行、联想控股等，构成了泛海的上市公司矩阵。
 转型发展的阶段结果体现在泛海控股的财务表现中。目前，泛海控股分为房地产业务、金融业务、战略投资业务三个板块，2018年中报显示，上半年，公司50.88亿元的总营收中，房地产业贡献的仅有11.41亿元，且同比减少48.81%，而信托业、保险业贡献的收入均已超过地产业务。
 报告期内，泛海控股并无新开工项目，施工全以项目续建为主。
 截止至2018年6月底，泛海控股在国内未开发的土地储备仅有武汉中央商务区项目、北京泛海国际居住区二期、沈阳泛海国际居住区三个。境外，有美国索诺马项目、美国纽约南街80 号项目、美国夏威夷Ko Olina 1#地项目、美国夏威夷Ko Olina 2#地项目等五个。
