--- a/source/_posts/攀钢钒钛：预计2018年度净利润将出现超两倍增幅.md
+++ b/source/_posts/攀钢钒钛：预计2018年度净利润将出现超两倍增幅.md
@@ -5,9 +5,10 @@ date: 2019-01-21 18:26:34
 tags: 
 categories: 
 ---
-对于业绩大幅上涨，攀钢钒钛公告称，主要是因为报告期内钒产品市场价格同比上涨，此外，公司坚持市场导向，全力做好产销衔接，报告期内公司钒钛产品销量同比均有一定幅度增长。
+攀钢钒钛21日公告，公司预计2018年度归属于上市公司股东的净利润实现30亿至32亿元，同比增长248%至271%。
 <!-- more -->
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/c742c625f9d9745f64a88044bbdba1e3.jpg" />
+一财资讯
 攀钢钒钛21日公告，公司预计2018年度归属于上市公司股东的净利润实现30亿至32亿元，同比增长248%至271%。
 对于业绩大幅上涨，攀钢钒钛公告称，主要是因为报告期内钒产品市场价格同比上涨，此外，公司坚持市场导向，全力做好产销衔接，报告期内公司钒钛产品销量同比均有一定幅度增长。
 此前，攀钢钒钛披露的三季报显示，2018年1~9月，完成营收106.66亿元，同比增64.67%；实现净利20.48亿元，同比增205.50%。
