--- a/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
+++ b/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
@@ -10,6 +10,7 @@ categories:
 1月21日晚间，沪深两市多家上市公司发布公告，以下是重要公告摘要，供投资者参考：
 中信建投披露非公开发行预案，本次非公开发行数量不超过12.77亿股，募集资金总额不超过130亿元，扣除发行费用后将全部用于补充公司资本金和营运资金，以扩大业务规模，提升公司的市场竞争力和抗风险能力。
 润达医疗公告，证监会对公司本次发行股份购买资产并募集配套资金申请作出不予核准的决定。根据证监会的决定，因本次重组涉及部分问题尚待进一步落实，同时近期证券市场波动较大，与制定重大资产重组方案时的情况已发生重大变化，公司决定终止本次重大资产重组事项。
+沪深两市首份2018年报出炉。金银河2018年实现营收6.42亿元，同比增长31%；实现净利4636万元，同比下降2.32%。
 招商公路披露2018年度业绩快报，实现营收68.04亿元，同比增长27.4%；实现净利38.9亿元，同比增长15.48%；基本每股收益0.629元。由于公司陆续并购了沪渝高速、渝黔高速及亳阜高速，同时处置了桂柳合营公司使得营业收入和利润同比大幅度增加。
 长沙银行披露业绩快报，公司2018年实现营业收入139.41亿元，同比增长14.95%；净利润44.79亿元，同比增长13.94%。基本每股收益1.42元。截至2018年末，不良贷款率1.29%，较上年末上升0.05个百分点。
 光大银行披露业绩快报，公司2018年实现营业收入1102.44亿元，同比增长20.03%；净利润336.59亿元，同比增长6.70%。基本每股收益0.61元。截至2018年末，不良贷款率1.59%，与上年末持平。
@@ -40,11 +41,14 @@ categories:
 三祥新材公告，公司控股股东宁德市汇阜投资有限公司提议2018年度利润分配及资本公积金转增股本预案为每10股转增4股并派现1.5元。
 兴瑞科技公告，实际控制人、董事长张忠良提议2018年度利润分配预案为：向全体股东每10股派发现金股利3元（含税），同时以资本公积金向全体股东每10股转增6股。
 西泵股份公告，控股股东宛西控股提议，向全体股东按每10股派发现金股利5.00元（含税），同时以资本公积金向全体股东每10股转增5股。
+创意信息公告，公司拟回购股份。资金总额不低于5000万元且不超过1亿元。回购股份的价格为不超过9元/股。
+汇通能源发布公告，公司原控股股东弘昌晟与西藏德锦于2019年1月11日签署的《股份转让协议》的过户登记手续办理完毕。本次股份过户登记完成后，西藏德锦为公司控股股东。公告显示，西藏德锦的股东分别为绿都集团、宇通集团等，其中绿都集团持有西藏德锦45.95%股份，为西藏德锦的控股股东。
 恒康医疗公告，持有6.03%股份的产业振兴投资基金原计划减持2%公司股份。现减持期限届满，产业振兴投资基金未减持公司股份。
 星普医科公告，公司收到实际控制人叶运寿及主要股东刘岳均、马林、刘天尧、徐涛的通知，上述5人分别与青岛盈康医疗投资有限公司签署了《股份转让协议》，拟将其持有的公司29%股权转让给青岛盈康医疗投资有限公司，转让价格为每股11.5元。完成后，盈康医投将成为公司的控股股东、海尔集团将成为公司的实际控制人。
 双箭股份公告，持股9.04%的泰达宏利计划以集中竞价交、大宗交易等方式，减持股份数量合计不超过3875万股，减持比例合计不超总股本的9.04%。截至本公告日，泰达宏利所持股份尚未解除限售，在股份解除限售前，不会减持其所持股份，上述限售股份将于2019年2月11日上市流通。
 科华控股公告，持股11.24%的股东斐君钽晟计划15个交易日后的6个月内，减持不超过800.4万股，即不超过公司总股本的6%。
 美达股份公告，持股4.28%的股东太仓德源，计划以集中竞价、大宗交易、协议转让等方式，减持股份不超过2259.88万股（占总股本4.28%）。
+三夫户外公告，公司董事、副总经理孙雷在国融证券办理的部分股票质押式回购交易已触发协议约定的违约条款，可能会被实施违约处置，可能导致孙雷被动减持。孙雷持有公司4.34%股份，累计质押股份486.69万股，占其所持公司股份的99.96%，占公司总股本的4.34%，其中向国融证券质押股份399.19万股（占总股本的3.56%）。
 雄韬股份公告，持股7.79%的轻机控股计划6个月内以集中竞价、大宗交易方式，减持不超过公司股份410万股（占总股本的1.17%）。
 乐视网公告，全资子公司乐视新生代于2016年7月至2017年4月，与北京文科租赁签署两份《融资租赁合同》，截至2019年1月11日，上述租金余额1.05亿。近日，乐视新生代收到北京文科租赁发出的《还款通知书》。截至目前，乐视新生代未偿还相关应付款项。另外，公司收到深交所通知：鉴于公司在信息披露、规范运作、内部控制等方面存在重大缺陷及风险，公司的持续督导期延长至2019年度。
 中粮地产公告，近日，公司收到国资委下发的《关于加快推动“双百企业”实施综合改革有关事项的通知》，公司已被纳入“双百企业”名单，公司综合改革方案已完成向国务院国有企业改革领导小组办公室备案。
@@ -52,6 +56,7 @@ categories:
 和而泰公告，公司公开发行可转换公司债券申请获得证监会发行审核委员会审核通过。
 傲农生物公告，1月12日，农业农村部新闻办公室发布，江苏省泗阳县发生非洲猪瘟疫情。经公司了解，本次发生非洲猪瘟疫情的养殖企业系公司持股10%的参股公司江苏加华。江苏加华对此次疫情造成的生物资产损失能否获得保险理赔表示存在不确定性。江苏加华后续需要按国家有关规定和要求实行一段时间的空场后才能继续恢复养殖生产，其恢复经营的时间目前尚无法准确估计。
 阳光股份公告，日前证监会例行召开的新闻发布会中提及龙英利用内幕信息，交易公司股票而遭受证监会处罚。随后，公司注意到多家媒体对上述新闻进行报道并转载，有市场人员认为公司人员因内幕交易受到处罚。对此，公司表示，龙英本人及其直系亲属、主要社会关系过去及现在均不在公司及公司附属企业任职。截至目前，公司未有任何人员因涉及内幕交易被证监会通报处罚,公司本身亦不存在内幕交易行为。
+康得新公告，因主要银行账号被冻结，公司股票触发其他风险警示情形。自1月23日开市起，公司股票交易实施其他风险警示。公司股票1月22日上午开市起停牌一天，1月23日复牌。另外，公司2018年度第二期超短期融资券应于1月21日兑付本息。截至1月21日营业终了，公司未能按照约定筹措足额偿付资金，“18康得新SCP002”不能按期足额偿付本息，已构成实质性违约。
 宁波热电公告，公司拟与南京高传机电、宁能投资发起设立宁能产业投资基金，基金总规模为8亿元，公司拟以现金方式出资4亿元。基金投资方向主要是新能源和热电类项目。
 江河集团公告，全资子公司北京江河幕墙系统工程有限公司近日收到中国科学院量子信息与量子科技创新研究院1号科研楼幕墙工程专业承包中标通知书，中标金额为2.69亿元，约占公司2017年度营业收入的1.76%。
 众合科技公告，公司中标宁波市轨道交通5号线一期工程信号系统采购，中标金额2.65亿元。现公示期已结束。本项目中公司将首次采用自主研发的全自动无人驾驶（DTO）技术，标志着公司在无人驾驶方向取得关键性里程碑业绩和行业领先地位，有助于公司国产化产品进一步迈向人工智能。
@@ -62,6 +67,7 @@ categories:
 蓝黛传动公告，公司于近日收到中央军委装备发展部颁发的《装备承制单位资格证书》。经审查，公司符合GJB9001B质量管理体系要求，具备装备承制单位资格条件，已注册编入《中国人民解放军装备承制单位名录》。
 康旗股份公告，公司与腾云天下签订了《战略合作框架协议》。双方将在大数据聚合超算的基础上，完善数据智能综合解决方案，共同建立银行、保险等机构客户大数据服务平台，促进“数据智能+民生消费”理念的首次合作。腾云天下是国内领先的第三方数据智能服务商。
 惠博普公告，公司近日与中国银行北京市分行签订了《战略合作协议》，就双方金融业务合作达成协议。中国银行北京市分行将积极统筹协调中国银行境内、境外分支机构，联动中国银行整体资源和服务能力，为惠博普提供“一揽子”全面金融服务。
+麦迪电气公告，经公司申请，并经深交所核准，公司证券简称自1月22日起发生变更， 证券简称“麦克奥迪”，公司证券代码不变。
  
  
 1月20日晚间，沪深两市多家上市公司发布公告，以下是重要公告摘要，供投资者参考。
