--- a/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
+++ b/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
@@ -27,6 +27,7 @@ categories:
 宜宾纸业公告，预计2018年的净利润为1.69亿元至1.77亿元，同比增加82%到91%。报告期内，公司收到宜宾市翠屏区征地拆迁服务中心支付的老厂区搬迁补偿款，在扣除对应的帐面价值及相关费用后预计将实现大约2.15亿元收益。
 金石资源公告，预计2018年实现的净利润同比增加70%到90%。公司上年同期盈利7711万元。业绩预增的主要原因是公司萤石产品的销售价格和产品产销量均有所上升。
 东杰智能披露2018年度业绩预告，预盈5850万元–6770万元，同比增长60.06%-85.24%。公司发行股份并购了常州海登赛思涂装设备有限公司，从2018年第二季度起将其纳入公司合并范围，所以2018年累计净利润较上年同期增长。
+锐科激光披露2018年度业绩预告，预盈4亿元至4.6亿元，同比增长44.31%~65.96%。公司高功率光纤激光器产品收入增长较快，成本控制较好，是公司业绩增长的主要原因。
 安车检测公告，预计2018年盈利盈利1.2亿元-1.28亿元，同比增51.81%-61.93%。营业收入主要来源于机动车检测系统及检测行业联网监管系统的销售。
 坤彩科技公告，预计2018年度实现归属于上市公司股东的净利润为17,703万元到18,883万元，与上年同期相比，增加5,901万元到7,081万元，同比增加50%到60%。
 方大炭素公告，预计2018年实现的净利润与上年同期相比，增加17.97亿元-20.97亿元，同比增加49.64%-57.93%。公司上年同期盈利36.20亿元。
@@ -50,6 +51,9 @@ categories:
 美达股份公告，持股4.28%的股东太仓德源，计划以集中竞价、大宗交易、协议转让等方式，减持股份不超过2259.88万股（占总股本4.28%）。
 三夫户外公告，公司董事、副总经理孙雷在国融证券办理的部分股票质押式回购交易已触发协议约定的违约条款，可能会被实施违约处置，可能导致孙雷被动减持。孙雷持有公司4.34%股份，累计质押股份486.69万股，占其所持公司股份的99.96%，占公司总股本的4.34%，其中向国融证券质押股份399.19万股（占总股本的3.56%）。
 雄韬股份公告，持股7.79%的轻机控股计划6个月内以集中竞价、大宗交易方式，减持不超过公司股份410万股（占总股本的1.17%）。
+红日药业公告，兴城集团与姚小青、大通集团签署《支持取得实际控制权的协议》，约定在兴城集团持有公司股份大于或等于15%时，姚小青、大通集团不谋求公司实控人地位、认可并支持兴城集团作为公司控股股东并对公司实施实际控制。同日，兴城集团与姚小青签署了《表决权委托协议》，接受姚小青所持红日药业6%股份的表决权委托。上述协议生效后，兴城集团将成为公司控股股东，成都市国资委将成为实控人。
+四川长虹公告，拟通过非公开协议方式向国网绵阳供电公司转让公司持有的220千伏群文变电站输变电资产及配套设施，本次交易价格为1.05亿元（含增值税价1.20亿元）。本次出售的标的资产为公司原等离子项目配套工程，公司对等离子业务及资产进行处置和剥离后，标的资产用电规模未达到预期水平。不考虑本次交易涉及的土地增值税等相关税费，预计本次资产转让可实现收益约5680万元。
+九芝堂公告，公司及多位高管收到湖南监管局下发的警示函，九芝堂拟以10.11亿元受让科信美德26.87%的股权，但是公司未将本次交易认定为关联交易并予以披露，亦未履行关联交易审议程序。交易对方刘梅森现任职的牡丹江霖润药用辅料有限责任公司为九芝堂董事长李振国实际控制；刘梅森投资交易标的资金6000万元来源于李振国。九芝堂未充分披露上述信息。
 乐视网公告，全资子公司乐视新生代于2016年7月至2017年4月，与北京文科租赁签署两份《融资租赁合同》，截至2019年1月11日，上述租金余额1.05亿。近日，乐视新生代收到北京文科租赁发出的《还款通知书》。截至目前，乐视新生代未偿还相关应付款项。另外，公司收到深交所通知：鉴于公司在信息披露、规范运作、内部控制等方面存在重大缺陷及风险，公司的持续督导期延长至2019年度。
 中粮地产公告，近日，公司收到国资委下发的《关于加快推动“双百企业”实施综合改革有关事项的通知》，公司已被纳入“双百企业”名单，公司综合改革方案已完成向国务院国有企业改革领导小组办公室备案。
 永鼎股份公告，公司公开发行可转换公司债券的申请获得证监会审核通过。
