--- a/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
+++ b/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
@@ -15,6 +15,7 @@ categories:
 长沙银行披露业绩快报，公司2018年实现营业收入139.41亿元，同比增长14.95%；净利润44.79亿元，同比增长13.94%。基本每股收益1.42元。截至2018年末，不良贷款率1.29%，较上年末上升0.05个百分点。
 光大银行披露业绩快报，公司2018年实现营业收入1102.44亿元，同比增长20.03%；净利润336.59亿元，同比增长6.70%。基本每股收益0.61元。截至2018年末，不良贷款率1.59%，与上年末持平。
 上海建工披露业绩快报，公司2018年实现营业总收入1700.60亿元，同比增长19.69%；净利润27.30亿元，同比增长5.65%。基本每股收益0.29元。
+东方新星公告，第三季度报告中公司预计2018年度净利润为1430万元至1970万元，现因公司于2018年12月完成了重大资产重组，2018盈利预告修正为6.62亿元–6.92亿元，同比预增5936.35%-6209.90%。
 攀钢钒钛披露2018年度业绩预告，预盈30亿元至32亿元，同比增长248%～271%。报告期内，钒产品市场价格同比上涨；公司钒钛产品销量同比均有一定幅度增长。
 酒钢宏兴公告，预计2018年实现的净利润10.8亿元左右，同比增长156.43%左右。
 数码科技披露2018年度业绩预告，预盈8000万元—9000万元，同比增长119.2%-146.6%。报告期内，公司扎实推进各项经营计划，加大市场推广力度，销售规模进一步扩大，主营业务发展态势良好。
@@ -51,6 +52,7 @@ categories:
 美达股份公告，持股4.28%的股东太仓德源，计划以集中竞价、大宗交易、协议转让等方式，减持股份不超过2259.88万股（占总股本4.28%）。
 三夫户外公告，公司董事、副总经理孙雷在国融证券办理的部分股票质押式回购交易已触发协议约定的违约条款，可能会被实施违约处置，可能导致孙雷被动减持。孙雷持有公司4.34%股份，累计质押股份486.69万股，占其所持公司股份的99.96%，占公司总股本的4.34%，其中向国融证券质押股份399.19万股（占总股本的3.56%）。
 雄韬股份公告，持股7.79%的轻机控股计划6个月内以集中竞价、大宗交易方式，减持不超过公司股份410万股（占总股本的1.17%）。
+三安光电公告，兴业信托、泉州金控、安芯基金与控股股东三安集团签署《战略合作框架协议》。协议约定： 兴业信托、泉州金控、安芯基金计划向三安集团增资不低于54亿元，泉州金控向三安集团提供6亿元流动性支持。经核实，上述资金用于公司控股股东层面，不会用于上市公司，不会导致上市公司控股股东和实际控制人变更的情形。
 红日药业公告，兴城集团与姚小青、大通集团签署《支持取得实际控制权的协议》，约定在兴城集团持有公司股份大于或等于15%时，姚小青、大通集团不谋求公司实控人地位、认可并支持兴城集团作为公司控股股东并对公司实施实际控制。同日，兴城集团与姚小青签署了《表决权委托协议》，接受姚小青所持红日药业6%股份的表决权委托。上述协议生效后，兴城集团将成为公司控股股东，成都市国资委将成为实控人。
 四川长虹公告，拟通过非公开协议方式向国网绵阳供电公司转让公司持有的220千伏群文变电站输变电资产及配套设施，本次交易价格为1.05亿元（含增值税价1.20亿元）。本次出售的标的资产为公司原等离子项目配套工程，公司对等离子业务及资产进行处置和剥离后，标的资产用电规模未达到预期水平。不考虑本次交易涉及的土地增值税等相关税费，预计本次资产转让可实现收益约5680万元。
 九芝堂公告，公司及多位高管收到湖南监管局下发的警示函，九芝堂拟以10.11亿元受让科信美德26.87%的股权，但是公司未将本次交易认定为关联交易并予以披露，亦未履行关联交易审议程序。交易对方刘梅森现任职的牡丹江霖润药用辅料有限责任公司为九芝堂董事长李振国实际控制；刘梅森投资交易标的资金6000万元来源于李振国。九芝堂未充分披露上述信息。
