--- a/source/_posts/万亿构成的新能源汽车世界：销量增长与隐忧相伴.md
+++ b/source/_posts/万亿构成的新能源汽车世界：销量增长与隐忧相伴.md
@@ -14,6 +14,7 @@ categories:
 当整体车市遇冷时，新能源汽车却在持续升温。比亚迪、广汽等多家车企相关负责人在接受第一财经记者采访时皆表示，如果不是产能受限，2018年会交付更多新能源车。
 小鹏汽车董事长何小鹏在去年与同属于造车新势力阵营的蔚来董事长李斌打了一个赌，何小鹏认为李斌在2018年无法交付1万辆新能源车，而最终何小鹏输了，按此前的赌注送一辆小鹏电动车给李斌。这也折射，新能源的生产和销售速度，甚至超出一些业内人士的预期。
 截至2018年底，全球新能源汽车累计销售突破550万辆，中国占比超过53%。随着补贴等政策推动以及自主车企发力，中国已成为全球最大的新能源车市。中汽协的统计数据显示，2018年，中国新能源汽车产销量分别达到127万辆和125.6万辆，同比分别增长59.9%和61.7%。其中，纯电动汽车产销分别达到98.6万辆和98.4万辆，同比增长47.9%和50.8%；插电式混合动力汽车产销量分别达到28.3万辆和27.1万辆，同比增长122%和118%。
+近日，工业和信息化部部长苗圩在2019年中国电动汽车百人会论坛上表示，新能源汽车产业发展明显带动了投资、就业和税收增长，全产业链投资累计超过2万亿元人民币。
 目前，国内外主流车企基本上都在加快电动化的布局。领跑的比亚迪，在最近又推出一款长续航车型，将元EV综合工况续航里程从305公里升级到410公里。2018年，比亚迪虽然连续四年蝉联全球新能源汽车销量冠军，但守擂压力明显加大，其销售新能源汽车24.78万辆，而特斯拉24.52万辆。表面看上去，比亚迪以逾2000辆的优势胜出，但其销量包括新能源商用车，假如仅比较新能源乘用车销量，则是特斯拉拿下第一。前不久，特斯拉位于中国的超级工厂在上海临港奠基，未来将国产化降低成本，进一步抢占中国的新能源车市场。
 与此同时，造车新势力也加快涌入，而跨国车企巨头在“双积分”政策倒逼下也变得积极起来。大众在今年将与合作伙伴在中国共同投资超过40亿欧元用于包括电动汽车等领域。按计划，大众到2020年在中国市场交付大约40万辆新能源汽车。宝马、丰田、本田、现代等跨国车企也加速在化推进电动化战略实施。中国新能源汽车市场变得越来越热闹。
 在乘联会秘书长崔东树看来，新能源市场的高速增长主要是政策务实和企业努力的结果。为补贴降低设置过渡期，此举是汽车产业实现制造业转型升级和技术提升的合理选择。
@@ -29,7 +30,7 @@ categories:
 新能源车维修难，二手车交易更难。直控连锁汽车服务平台集群车宝副总裁兼二手车总经理王曙明近日接受第一财经记者采访时称，新能源二手车的交易很少，偶尔有一辆北汽纯电动车，但保值率很低，原先十多万的车，用了几年只能卖两三万元，确实不太好交易。新能源车配置不够，消费者对续航里程存在焦虑症，尤其是二手车电池衰减比较严重，车况不太理想。还有，新能源车牌也不能过户，用户要购买二手新能源车，一样也要去摇号。
 由中国汽车流通协会发布的2018年12月汽车保值率报告中提到，2018年12月，3年车龄的进口车型、合资品牌国产车型、自主品牌国产车型的平均保值率分别为63.5%、63.9%和57.4%。同期，3年车龄的新能源二手车保值率统计为47.5%。而部分新能源车的三年保值率甚至在40%以下。
 目前，个人消费者依然更倾向购买燃油车，这一现状并没有明显改变。在国际清洁交通委员会(ICCT)研究员崔洪阳看来，新能源汽车购买需求不足的主要原因在于：市场上可供消费者选择的电动车型仍然不够充足和多样、电动汽车前期购买成本依然较高、充电便利性较差、广大消费者对电动车具备的优势缺乏全面的认知。
-谁在买新能源汽车？小鹏汽车董事长何小鹏曾在媒体圈、科技圈、汽车研发圈等不同场合问过“你们每天或者经常开电动车的人举一下手”，其中包括在2018年1月极客公园举办的活动上，没有一次超过1%的人举手说自己每天在开电动车。向小鹏在2014年成为国内首批购买特斯拉的用户之一，特斯拉是促使他加入互联网造车队伍的原因之一。
+谁在买新能源汽车？小鹏汽车董事长何小鹏曾在媒体圈、科技圈、汽车研发圈等不同场合问过“你们每天或者经常开电动车的人举一下手”，其中包括在2018年1月极客公园举办的活动上，没有一次超过1%的人举手说自己每天在开电动车。何小鹏在2014年成为国内首批购买特斯拉的用户之一，特斯拉是促使他加入互联网造车队伍的原因之一。
 李威（化名）原是超豪华车保时捷的车主。现在，他外出也基本是开特斯拉，续航里程400公里的电动车基本能满足他在广州市区的活动需求。他家住在广州番禺的一个别墅区，家中装有充电桩。万一外出没电，特斯拉在广州设有多个公共充电站和充电桩可供充电。在他看来，开电动车越来越方便。其实，安装私人充电桩的要求不少，至少得有一个能使用一年以上的停车位，并且确保小区的电容足够，在确保不妨碍停车和不影响小区用电的情况下，充电桩安装才成为可能，而李威居住的地方满足了这些条件。此外，李威选择开电动车还有另一出发点，研究电动车后市场未来的商机。
 与何小鹏、李威这些车主有所不同，许多电动车用户是限购城市的普通消费者，苦于拿牌难而选择了可走绿色通道的新能源车。《迈向全面电动化政策导则》中指出，在2011到2017年全球范围内电动乘用车累计销量最高的25个城市中，上海和北京位列第一和第二名。这两个城市均属于限购城市，也就是说限购城市在推动新能源汽车市场发展方面发挥了很大的作用。
 除了私人购买外，深圳、广州等多个城市在加速推动公共领域电动化进程，也带动了新能源汽车的热销。近年来，深圳街道上的巴士和的士越来越多是来自比亚迪的新能源车，而广州白云公司在去年9月份也投放了200辆传祺GE3纯电动出租车营运。此外，一些共享汽车平台也在购买新能源汽车。
