--- a/source/_posts/独家|东航旗下上航国旅挂牌让出控股权，绿地或接盘.md
+++ b/source/_posts/独家|东航旗下上航国旅挂牌让出控股权，绿地或接盘.md
@@ -1,5 +1,5 @@
 ---
-title: 独家|东航旗下上航国旅挂牌出售控股权，绿地或接盘
+title: 独家|东航旗下上航国旅挂牌让出控股权，绿地或接盘
 author: wetech
 date: 2019-01-21 18:52:38
 tags: 
@@ -31,7 +31,7 @@ categories:
  
  
 围绕地产多元化的绿地控股通过收购进一步增加其在基建板块的实力。
-长江基建(透过其全资附属公司)已与配售代理订立配售协议，以向独立获配售人出售公司中合共4380万股，作价每股52.93元港元。
-1月9日，小米公告称，各控股股东自愿承诺未来365天不出售直接或间接实益拥有的公司股份。
-韩国大型游戏公司NEXON的创始人金正宙（Kim Jung-Ju，音译）对外承认，即将着手出售个人持有NEXON母公司NXC公司全部98.64%的股份，而韩国业界分析中资将成为最有力的收购者。
 对于机队规模已超60多架的吉祥航空来说，引进波音787飞机意义重大。
+站在新的历史起点上，继续解放思想、推进改革、扩大开放，是对改革开放最好的纪念。
+如果有面板，欧菲光就可以往上游延伸，让下游手机厂的客户“一站式购买”。欧菲光目前主要的客户是华为、小米、OPPO、vivo，它如果参股JDI成功，可以提高竞争力，进一步提升产业链垂直整合能力。
+绿地集团这个医院立项至今“一波三折”，体现了中资在海外落地项目所面临的特殊境遇。
