--- a/source/_posts/李克强：今年要争取在重点慢性病药品价格上有明显降幅.md
+++ b/source/_posts/李克强：今年要争取在重点慢性病药品价格上有明显降幅.md
@@ -1,5 +1,5 @@
 ---
-title: 李克强：绝不能再发生接种过期失效疫苗的问题
+title: 李克强：今年要争取在重点慢性病药品价格上有明显降幅
 author: wetech
 date: 2019-01-21 20:39:09
 tags: 
@@ -35,7 +35,7 @@ categories:
  
  
 试点工作分三个阶段，第一阶段为集中招采阶段，25个产品中选，平均降价幅度52%。第二阶段为中标结果的落实和配套。第三阶段为评估、总结阶段。
-总理说，我们提出保持中国经济运行在合理区间，这就意味着我们允许经济增速有一定的弹性浮动，但不能大起大落，更不能“断崖式下跌”。
+李克强说，我们已经积累了不搞“大水漫灌”的经验，可以通过创新和完善宏观调控，在转变发展方式中保持经济运行在合理区间，实现就业比较充分、收入不断增加、环境持续改善。
 印度的“穷人道路”已陷入两难境地，美国的“富人道路”又推高药价，那么对于中国来说，未来医药体系发展究竟该走什么道路？
-2019年1月7日，江苏金湖县黎城卫生院发生了一起口服过期疫苗事件。通过对接种儿童家长的逐一电话排查、上门巡查，截至9日下午4点，确定全县145名儿童接种了过期脊灰疫苗。
 康芝药业（300086.SZ）并非此前的带量采购中标企业，而上海带量采购中标的尼美舒利口服常释剂型，截止目前供应情况稳定。
+据天津大王庄街卫生服务中心院长邱鸿春介绍，通过创新物联网技术，实现了疫苗安全“最后一公里”可追溯、问题疫苗秒冻结、精准取苗零差错。
