--- a/source/_posts/东芝工厂实际产能翻两番！中资企业猛药“盘活”被收日企.md
+++ b/source/_posts/东芝工厂实际产能翻两番！中资企业猛药“盘活”被收日企.md
@@ -1,5 +1,5 @@
 ---
-title: 东芝工厂产能翻了两番！中资企业的猛药“盘活”了古董日企
+title: 东芝工厂实际产能翻两番！中资企业猛药“盘活”被收日企
 author: wetech
 date: 2019-01-21 22:54:35
 tags: 
@@ -50,7 +50,7 @@ categories:
 “当然，也有新的挑战。”周南举例说，比如，东芝的白电业务在美的手里，东芝的彩电业务在海信手里，今后美的、海信在东芝品牌的运作上，就要考虑如何协同。就像博朗的剃须刀在宝洁手里，博朗的小家电在德龙旗下，仍然实现博朗品牌的统一。
  
  
+要求国资平台成立3支民营上市公司发展支持基金，并原则上不得控股帮扶企业，不改变上市公司实际控制权。
 尽管目前多品牌并进，但在美国市场，海信集团最终会统一使用海信品牌。
 “自2013年设立之初，海尔租赁就没有将自己的定位局限于‘融资租赁’，而是旗帜鲜明地提出了‘产业金融’的理念和模式”，海尔租赁CEO张磊说道
 据天津大王庄街卫生服务中心院长邱鸿春介绍，通过创新物联网技术，实现了疫苗安全“最后一公里”可追溯、问题疫苗秒冻结、精准取苗零差错。
-企业要有一种紧迫感，一种从传统封闭企业变成无边界生态的紧迫感。
