--- a/source/_posts/盘前必读丨国务院发文启动“无废城市”建设，开启万亿级市场.md
+++ b/source/_posts/盘前必读丨国务院发文启动“无废城市”建设，开启万亿级市场.md
@@ -52,3 +52,8 @@ categories:
 多家公司于1月21日晚披露业绩预告。其中，中国石油2018年净利同比预增123%-132%；攀钢钒钛2018年净利同比预增248%-271%；东方新星2018年业绩预告大幅向上修正，同比预增59至62倍。
  
  
+财政部、税务总局18日发布通知，实施小微企业普惠性税收减免政策，对月销售额10万元以下（含本数）的增值税小规模纳税人，免征增值税。
+10日，工信部部长苗圩表示，今年国家将在若干个城市发放5G临时牌照，使大规模的组网能够在部分城市和热点地区率先实现，同时加快推进终端的产业化进程和网络建设。分析认为，随着5G牌照发放试点的临近，5G商用步伐将进一步提速。
+国务院总理李克强1月9日主持召开国务院常务会议，决定再推出一批针对小微企业的普惠性减税措施。
+国家发改委副主任宁吉喆表示，今年将制定出台促进汽车、家电等热点产品消费的措施。有机构认为，伴随二胎政策放开、家庭可支配财富的累积、分区洗护等更高层次需求产生，未来洗衣机的每户家庭保有量有望超越1台，新增需求将释放。
+机构认为，无论是从国内政策层面，还是从外围环境角度，当前股市的风险偏好有望得到一定程度提升，春季行情可期。
