--- a/source/_posts/盘前必读丨国务院发文启动“无废城市”建设，开启万亿级市场.md
+++ b/source/_posts/盘前必读丨国务院发文启动“无废城市”建设，开启万亿级市场.md
@@ -5,28 +5,29 @@ date: 2019-01-22 07:35:39
 tags: 
 categories: 
 ---
-17:30 英国11月三个月ILO失业率
+周二亚洲市场开市，日经225指数开盘涨0.24%，报20770.06点。
 <!-- more -->
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/5795dce2c13c12cd19ef68151420a6d2.jpg" />
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/8147821f72ea16af6521d3035ca403a8.jpg" />
 当地时间周一，美国股市因假日休市一天。欧洲三大股指涨跌不一，德国DAX指数跌0.62%。油价周一小幅上涨，扭转了早些时候的跌势，WTI油价稳定在两个月高点附近。金价连跌三日，至近一个月来最低水准，美国黄金期货下跌0.2%，报1279.60美元。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/1115fd943822077aad8679290e0a4854.jpg" />
-17:30 英国11月三个月ILO失业率
+周二亚洲市场开市，日经225指数开盘涨0.24%，报20770.06点。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/5767ac1ae30af5a3dc0d721929905aab.jpg" />
-17:30 英国12月失业金申请人数变动(万人)
+17:30 英国11月三个月ILO失业率
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/55ce072b499537a5b86e35d12e40285f.jpg" />
-18:00 德国1月ZEW经济景气指数
+17:30 英国12月失业金申请人数变动(万人)
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/b77d98654074479612971929b2907b09.jpg" />
-23:00 美国12月成屋销售总数年化(万户)
+18:00 德国1月ZEW经济景气指数
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/9d8e2d90a2b37391ca779f15a10018b0.jpg" />
-无
+23:00 美国12月成屋销售总数年化(万户)
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/3fe87f78bb215979ccf7a8b1a382813c.jpg" />
 无
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/10271f820278a7057d79730f65d39711.jpg" />
-省部级主要领导干部坚持底线思维着力防范化解重大风险专题研讨班21日开班，习近平发表重要讲话。习近平强调，科技领域安全是国家安全的重要组成部分。要加强重大创新领域战略研判和前瞻部署，抓紧布局国家实验室，重组国家重点实验室体系，建设重大创新基地和创新平台，完善产学研协同创新机制。要加快科技安全预警监测体系建设，围绕人工智能、基因编辑、医疗诊断、自动驾驶、无人机、服务机器人等领域，加快推进相关立法工作。
+无
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/6ef4b7fc375403cd4e34af971df890f4.jpg" />
-1月21日，中国银保监会办公厅发布《关于进一步加强车险监管有关事项的通知》。各财产保险公司使用车险条款、费率严禁以下行为：未经批准，擅自修改或变相修改条款、费率水平；通过给予或者承诺给予投保人、被保险人保险合同约定以外的利益变相突破报批费率水平；通过虚列其他费用套取手续费变相突破报批手续费率水平等。
+省部级主要领导干部坚持底线思维着力防范化解重大风险专题研讨班21日开班，习近平发表重要讲话。习近平强调，科技领域安全是国家安全的重要组成部分。要加强重大创新领域战略研判和前瞻部署，抓紧布局国家实验室，重组国家重点实验室体系，建设重大创新基地和创新平台，完善产学研协同创新机制。要加快科技安全预警监测体系建设，围绕人工智能、基因编辑、医疗诊断、自动驾驶、无人机、服务机器人等领域，加快推进相关立法工作。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/781b132626e7c57022d1491e8f3a175c.jpg" />
+1月21日，中国银保监会办公厅发布《关于进一步加强车险监管有关事项的通知》。各财产保险公司使用车险条款、费率严禁以下行为：未经批准，擅自修改或变相修改条款、费率水平；通过给予或者承诺给予投保人、被保险人保险合同约定以外的利益变相突破报批费率水平；通过虚列其他费用套取手续费变相突破报批手续费率水平等。
 生态环境部大气环境司司长刘炳江21日在新闻发布会表示，将分类推进重点行业污染深度治理。第一个重点是推进钢铁行业超低排放工作，钢铁行业深度治理将是2019年大气污染防治的重点。第二是推进重点区域执行大气污染物特别排放限值，京津冀及周边地区已于2018年10月1日起全面执行大气污染物特别排放限值，下一步将逐步扩展至长三角地区、汾渭平原等其他区域。第三是推进VOCs治理。
 从生态环境部获悉，国务院办公厅近日印发《“无废城市”建设试点工作方案》，部署开展“无废城市”建设试点工作。我国历年堆存的工业固体废物总量达600亿至700亿吨，固废市场成仅次于水务的第二大环保产业。权威预计，我国固废市场规模将从占环保投资总额不到10%增至“十三五”的25%左右。据此测算，“十三五”期间固废处理行业投资规模有望超过3.5万亿元。
 相关个股：东江环保（002672.SZ）、富春环保（002479.SZ）。
