--- a/source/_posts/中信证券：广州证券定位子公司，对评级“整体影响可控”.md
+++ b/source/_posts/中信证券：广州证券定位子公司，对评级“整体影响可控”.md
@@ -16,13 +16,13 @@ categories:
 公告称：“广州证券目前位于前述区域内的证券经纪业务人员劳动关系拟保持不变，上述区域外证券经纪业务人员在履行必要程序后，可选择进入中信证券体系内继续从事所在区域内的证券经纪业务；广州证券除证券经纪业务外的其他人员和业务，将统一纳入中信证券相应各业务线进行统一管理。”
 关于这次重组，华南某知名券商高管向第一财经记者表示，中信证券和广州市国资委是“双赢”，中信证券以较低的价格得到了广州证券的华南营业部资源，等于买到了大量客户，完善了华南布局；越秀金控背后的广州市国资委则成为了行业龙头的第二大股东，实现了资产优化，广州证券将会参照中信证券并购万通、金通模式保留法人地位，其实并不影响广州本地金融资源规模。
 本次交易完成后，越秀金控将合计持有中信证券约6.14%的股份，中信证券目前第一大股东中信有限届时将持有中信证券约15.49%的股份。中信建投证券分析师张芳认为，本次交易广州证券1.24倍的市净率，对广州证券的估值是相对低廉且合理的，中信证券借助证券业估值低谷期完成精准抄底。
-中信证券在广东省（不含深圳）营业网点总数将由18家增至50家，有望进入在粤证券经纪业务第一梯队，关于未来整合，营业部经纪业务的人员跟其他人员将会采取不同的方式，这或许会引发潜在劳工纠纷。
+中信证券在广东省（不含深圳）营业网点总数将由18家增至50家，有望进入在粤证券经纪业务第一梯队，关于未来整合，营业部经纪业务的人员跟其他人员将会采取不同的方式。
 中信证券解释，与逐个新设营业网点方式相比，本次交易可一次性取得广州证券的营业网点，可大幅减少时间成本和运营成本，快速提升中信证券在广东省的营业网点数量、客户渠道，有助于提升公司在广东省的市场份额，补强区域竞争力。
 关于广州证券2018年的亏损，中信证券称：“自2016年下半年以来，广州证券加快全国证券经纪业务布局，2016全年新增83家营业部和30家分公司；随着分支机构的正式设立和人员陆续到位，刚性成本支出有所增加；同时，受证券行业整体经营环境的影响，分支机构业务需要时间进行拓展，目前对收入的贡献尚未显现。”“对于其他新增业务，中信证券将要求广州证券严格执行相关立项、准入或投资标准和管理流程，积极控制风险。”
 越秀金控2018年半年报显示，广州证券的42家华南地区营业部，虽然不到总数136家的三分之一，不过带来的营业收入达到7.05亿元，占总收入8.01亿元的近90%；营业利润方面，42家营业部的华南地区是4267.19万元，其他地区营业部都处于亏损状态，全公司营业亏损为7111.69万元。
 对此，上述华南券商高管表示，广州证券前几任管理团队，在经纪业务上管理的理念，其实还是传统“渠道为王”的思路，在人员跟不上的情况下，在市场已经低迷时，2016年后新设营业部一百多家，目前大部分在亏损中，每家营业部人员平均不到十人，少的则只有三四人，未来扭亏需要借助中信证券相对强大的各类资源。
 中信证券承认：“鉴于本次交易相关的业务整合涉及业务和客户及员工数量众多，部分员工可能存在因不能适应新的企业文化或管理制度而发生工作变动，或者不能在整合期与客户保持有效沟通，从而可能引发部分客户流失和员工劳工纠纷的风险。”
-接受第一财经记者采访的广州证券职员表示，主要业务运营总部在北京的中信证券，整合总部在广州的券商，这或许是可能引发劳工纠纷的关键，不过中信证券工资水平本身高于广州证券，对广州证券的职员而言，除了接受中信证券安排以外，也可以跳槽到深圳的券商或者基金，薪酬待遇也有机会提升。
+接受第一财经记者采访的广州证券职员表示，主要业务运营总部在北京的中信证券，整合总部在广州的券商，不过中信证券工资水平本身高于广州证券，对广州证券的职员而言，除了接受中信证券安排以外，也可以跳槽到深圳的券商或者基金，薪酬待遇也有机会提升。
 中信证券会不会因为买入BBB评级的广州证券，而丧失自身AA的评级？中信证券回复上证所的答案是“整体影响可控”。
 “因存在被调查问题，广州证券在2016年7月的券商评级中被下调一级，由此前的A级变成直至目前的BBB级。”上证所在问询函中提到，“请补充披露收购标的资产后，是否会对公司的评级产生负面影响，以及公司是否有相关措施保证合规运行。”
 而关于此前导致降级的业务违规，中信证券称，“要求广州证券限期完成整改或开展风险化解工作。”目前，此项工作正在有序推进并取得了一定进展。“积极支持或参与广州证券处理相关问题，消除或降低相关问题对公司的负面影响，因此中信证券收购广州证券，对公司分类评价的整体影响可控。”
