--- a/source/_posts/市场机会丨人工智能基础层建设加速，行业应用进一步拓展.md
+++ b/source/_posts/市场机会丨人工智能基础层建设加速，行业应用进一步拓展.md
@@ -1,5 +1,5 @@
 ---
-title: 市场机会｜人工智能基础层建设加速，行业应用进一步拓展
+title: 市场机会丨人工智能基础层建设加速，行业应用进一步拓展
 author: wetech
 date: 2019-01-22 08:22:10
 tags: 
@@ -10,7 +10,7 @@ categories:
 清华大学人工智能研究院21日宣布成立知识智能研究中心，发布了清华大学知识计算开放平台（THUKC），旨在进一步推动中国人工智能领域的基础理论探究。据介绍，清华大学知识计算开放平台涵盖语言知识、常识知识、世界知识和科技知识库，包括开放语言知识库“知网”、中英文跨语言百科知识图谱XLORE和科技知识挖掘平台Aminer。
 当前，主要国家均将AI作为战略选项，欧盟、日本等国家和地区已出台战略规划。我国“AI+”战略轮廓正在形成，AI已经被定位为深化经济结构调整的重要抓手，“互联网+”战略将向“AI+”战略延伸。
 人工智能产业链包括三层：基础层、技术层和应用层。基础层主要涉及数据的收集与运算，这是人工智能发展的基础，主要包括AI芯片、传感器、大数据与云计算。技术层是人工智能产业发展的核心。应用层是建立在基础层与技术层基础上，实现与传统产业的融合发展以及不同场景的应用。
-随着投入的不断加大，我国人工智能产业将加速发展，率先布局的企业持续受益，A股市场相关上市公司中全志科技（300458.SZ）、科大讯飞（002230.SZ）、海康威视（002415.Z）以及中科曙光（603019.SH）等值得关注。
+随着投入的不断加大，我国人工智能产业将加速发展，率先布局的企业持续受益，A股市场相关上市公司中全志科技（300458.SZ）、科大讯飞（002230.SZ）、海康威视（002415.SZ）以及中科曙光（603019.SH）等值得关注。
  
  
 华为率先完成中国5G技术研发试验2.6GHz频段测试
