--- a/source/_posts/市场机会丨煤炭消费比例首次低于60，清洁能源迎机遇.md
+++ b/source/_posts/市场机会丨煤炭消费比例首次低于60，清洁能源迎机遇.md
@@ -11,7 +11,7 @@ categories:
 近年来我国现有能源结构不断变化，煤炭消费量于2013年见顶回落。根据此前国家能源局印发的《2018年能源工作指导意见》中，2018年全国能源消费总量控制在45.5亿吨标准煤左右。非化石能源消费比重提高到14.3%左右，煤炭消费比重下降到59%左右。从刘司长的讲话分析，2018年能源结构调整目标圆满完成。
 我国未来的诸多能源目标，包括降低单位GDP碳排放、控制碳排放总量、以及能源结构优化，实质上就是对煤炭消费量和消费占比的调减。未来我国仍将严格控制煤炭消费总量，进一步降低其在能源结构中的比重，但由于煤炭资源占我国化石能源储量的89%，未来其主体能源地位不会改变。
 研究人士普遍认为，未来我国能源将呈现“石油稳、天然气升、煤炭降”的发展趋势，预计到2030年石油、天然气、煤炭和可再生能源在一次能源结构中的占比分别为19%、15%、46%和20%，能源结构的调整以及各类化石能源利用方式的变化，将会给相关公司带来长期的发展机会。
-随着煤炭消费的比例的持续下降，非石化能源和天然气在能源消费量中所占的比例将提升，A股市场上的金风科技（002202.SZ），新奥股份（600803.SH）、广汇能源（600256.SH）、隆基股份（601012.SH）等。
+随着煤炭消费的比例的持续下降，非石化能源和天然气在能源消费量中所占的比例将提升，A股市场上的金风科技（002202.SZ）、新奥股份（600803.SH）、广汇能源（600256.SH）、隆基股份（601012.SH）等。
  
  
 周五早盘，煤炭板块持续走强，龙头股永泰能源今日高开后，快速拉升走强，再度封上涨停板，走出七天六板的行情。截至发稿，平庄能源涨超4%，云煤能源涨逾3%。
