--- a/source/_posts/第三批游戏版号下发腾讯网易继续缺席.md
+++ b/source/_posts/第三批游戏版号下发腾讯网易继续缺席.md
@@ -11,7 +11,7 @@ categories:
 一财资讯
 1月22日，原国家新闻出版广电总局政府网站公布“2019年1月份国产网络游戏审批信息”，获得版号的游戏共93个，审批时间为1月7日。其中，腾讯、网易两大游戏公司在此次版号下发名单中继续缺席。
 自去年12月游戏版号审批重启至今，已有共164款游戏取得版号，其中移动游戏149款，客户端游戏7款，网页游戏7款，PS4游戏机1款。这其中有不少A股游戏上市公司。然而，前述两家游戏公司仍未有游戏获得版号。
-首批获批版号的公司包括巨人网路、恺英网络、三七互娱、东方明珠、中青宝等。第二批包括掌趣科技、三七互娱、中文在线、文投控股等公司的游戏获批。第三批包括玖壹叁零、百视通、尚趣网络等。此外，一些较为知名的游戏厂商同样获得游戏版号，如蜗牛游戏、四三九九、边锋网络、波克城市等。
+首批获批版号的公司包括巨人网路、恺英网络、三七互娱、东方明珠、中青宝等。第二批包括掌趣科技、三七互娱、中文在线、文投控股等公司的游戏获批。第三批包括恺英网络、三七互娱、玖壹叁零、百视通、尚趣网络等。此外，一些较为知名的游戏厂商同样获得游戏版号，如蜗牛游戏、四三九九、边锋网络、波克城市等。
 梳理这三批获核发版号的游戏名单，从游戏题材来看，题材较为丰富，传奇题材游戏、麻将题材PC游戏、休闲独立游戏等题材均出现在版号发放名单，且大部分为手机游戏。
 此前，申万宏源研报称，第二批游戏版号发放距离首批仅隔6个工作日，进度再超预期，利好板块情绪，存量版号审核加速显示管理层对版号问题重视和对市场诉求的积极响应。但存量版号的加速审核不意味监管的放松，对于游戏产业，特别是游戏内容合规性的强监管，将是未来的常态，该趋势下合规运营的规模化厂商优势将逐渐显现。
  
