--- a/source/_posts/两市首份年报出炉金银河早盘大跌8.md
+++ b/source/_posts/两市首份年报出炉金银河早盘大跌8.md
@@ -5,11 +5,11 @@ date: 2019-01-22 09:41:02
 tags: 
 categories: 
 ---
-周一早盘，金银河开盘跌7.58%，截至发稿，该股跌8%，报24.39元，市值18.21亿，换手率4.82%。
+周二早盘，金银河开盘跌7.58%，截至发稿，该股跌8%，报24.39元，市值18.21亿，换手率4.82%。
 <!-- more -->
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/e25940cba37072cc39f38f7ebd161a0f.jpg" />
 一财资讯
-周一早盘，金银河开盘跌7.58%，截至发稿，该股跌8%，报24.39元，市值18.21亿，换手率4.82%。
+周二早盘，金银河开盘跌7.58%，截至发稿，该股跌8%，报24.39元，市值18.21亿，换手率4.82%。
 1月21日晚，金银河披露沪深两市首份2018年报。公司2018年实现营收6.42亿元，同比增长31%；实现归属于上市公司股东的净利润4636.48万元，同比下降2.32%；同时，公司拟每10股分配0.65元（含税）。
 年报显示，报告期内，公司所处锂电池和有机硅行业竞争进一步加剧，下游中小生产企业扩产变得谨慎，投资扩产意愿整体下降，单体设备营业收入增速放缓，但公司全自动生产线仍取得129.81%的增长。
 公司同日披露一季报预告，预计今年一季度盈利394万元至473万元，同比增长0%至20%。公告称，公司按照年度计划稳步推进工作，在手订单较为充足，预计第一季度销售额略有增长，以致净利润略有上涨。
