--- a/source/_posts/专访马骏：支持绿色消费的金融服务是新的蓝海.md
+++ b/source/_posts/专访马骏：支持绿色消费的金融服务是新的蓝海.md
@@ -32,7 +32,7 @@ categories:
 另一个方面，绿色金融未来要推广至大量的中小金融机构和中小微企业，才能逐步做到绿色金融对实体经济的全覆盖。银行给小微企业的贷款一般都不是项目贷款，而是流动资金贷款或给企业主的个人贷款，因此传统的以项目是否绿色来界定绿色信贷的做法就不适用。下一步，要解决如何界定绿色小微企业的问题。我考虑，是否可以从小微企业所从事的主业、绿色产品收入占全部收入的比重、是否使用绿色供应链、是否有污染记录等维度来界定。一旦某个小微企业被界定为绿色企业，这家企业的流动资金贷款就应该界定为绿色信贷。
 香港在发展绿色金融方面有得天独厚的优势。它是一个比较成熟的开放性金融市场，有绿色偏好的许多国家的投资者聚集在香港。这次在香港召开亚洲金融论坛期间，人民银行、香港金管局和香港绿色金融协会共同组织了57家内地潜在绿色债券发行机构到来香港，了解香港的绿债市场情况。这两天他们一直都在开会，见投资人、承销商，内地与香港的金融监管部门也积极推介了香港的绿色金融市场。
 2018年前三个季度，在香港发行的绿色债券达80亿美元，远远超过2017年的30亿美元。香港已宣布要发行1000亿港币的政府绿色债券，还为首次到香港发债的发行人提供250万港币的补贴和绿债认证补贴，其优惠政策的力度是领先全球的，我认为香港绿色债券市场在未来几年会成长得非常快。
-我们在香港发起成立绿色金融协会的目的，一是组织业界的力量来向内地和其它国家推介香港绿色金融市场，尤其是绿债市场；同时，要在香港推动绿色银行原则以及信贷绿色化，孵化更多绿色资产管理的机构，争取成为中国内地和“一带一路”国家绿色项目的重要融资平台。香港特首非常支持协会的工作，亲自参加了协会的成立仪式。
+我们在香港发起成立绿色金融协会的目的，一是组织业界的力量来向内地和其它国家推介香港绿色金融市场，尤其是绿债市场；同时，要在香港推动绿色银行原则以及信贷绿色化，孵化更多绿色资产管理的机构，争取成为中国内地和“一带一路”沿线国家绿色项目的重要融资平台。香港特首非常支持协会的工作，亲自参加了协会的成立仪式。
 香港和内地在绿色金融方面是互相促进、互相补充的关系。比如，香港提供了较低成本的国际绿色资金，内地应该充分利用。事实上，内地发行人已经占香港绿债发行市场的60%。位于香港的国际机构投资者可以给内地带来许多ESG投资的理念和方法。但是，内地也有许多方面值得香港借鉴，包括对银行的绿色信贷指引、绿色金融指标体系、对上市公司环境信息披露的规划、政府对绿色项目的激励措施等。在这些领域，内地的一些好的做法已经开始成为香港发展绿色金融的借鉴和动力。
  
  
