--- a/source/_posts/A股复盘10张图丨三大股指跌逾1，次新股逆市走强.md
+++ b/source/_posts/A股复盘10张图丨三大股指跌逾1，次新股逆市走强.md
@@ -1,5 +1,5 @@
 ---
-title: A股复盘9张图丨三大股指跌逾1，次新股逆市走强
+title: A股复盘10张图丨三大股指跌逾1，次新股逆市走强
 author: wetech
 date: 2019-01-22 15:14:57
 tags: 
@@ -19,16 +19,21 @@ categories:
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/75d00cade853f5ceddd2d3a6b4955cc4.jpg" />
 国家统计局1月21日发布的数据显示，2018年12月份，规模以上工业增加值同比实际增长5.7%，环比增长0.54%。其中，化学原料和化学制品制造业增长1.8%。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/cacb5c164f5c46ef00a5e9a708271fad.jpg" />
-1.统计局公布2018年四季度和全年国内生产总值（GDP）初步核算结果，房地产业四季度同比增长2%，在所有行业中增速最低，金融业GDP同比增长6.3%，制造业GDP同比增长5.7%，批发和零售业GDP同比增长5.5%。初步核算，第一产业、第二产业、第三产业全年GDP分别为6.47万亿元、36.60万亿元、46.96万亿元。
+盘后数据显示，1月22日龙虎榜中，共6只个股出现了机构的身影，有3只股票呈现机构净买入，3只个股呈现机构净卖出。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/a5077f654096bd2a60356c47a2a7a0e8.jpg" />
-2.1月22日，国家新闻出版广电总局网站显示，第三批游版号已经下发，总数为93个，审批时间为1月7日。其中，腾讯、网易两大游戏公司在此次版号下发名单中继续缺席。据悉，自游戏版号审批重启至今，已经有257款游戏取得版号，上述两家游戏公司仍未获得版号。
+当天机构净买入前三的股票分别是华正新材、迈为股份、吉艾科技，净买入金额分别为5413万元、1636万元、538万元。
+<img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/f9cbd88108a010612dff27e1410e52fe.jpg" />
+当天机构净卖出前三的股票分别是贝通信、华林证券、N宁表，净流出金额分别是1747万元、18万元、4万元。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/de828bb6efeb94912da3bfe14a24b24f.jpg" />
-3.1月22日，上海市统计局发布，初步核算，2018年全市生产总值完成32679.87亿元，按可比价格计算，比上年增长6.6%。上海全市经济社会发展总体平稳、稳中有进、稳中向好，经济发展的韧性、活力和包容性增强，高质量发展态势显现。2018年，上海第一产业增加值104.37亿元，下降6.9%；第二产业增加值9732.54亿元，增长1.8%；第三产业增加值22842.96亿元，增长8.7%。第三产业增加值占全市生产总值的比重为69.9%，比上年提高0.7个百分点。吸引外资成为一大亮点。
+详见下表：
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/82d5d389736144029e5f8ee2ce232be0.jpg" />
-4.1月22日起，海口市交通运输和港航管理局停止为燃油车办理《网络预约出租汽车运输证》许可业务。海口新增或更换的网约车将100%使用清洁能源车辆。
+1.统计局公布2018年四季度和全年国内生产总值（GDP）初步核算结果，房地产业四季度同比增长2%，在所有行业中增速最低，金融业GDP同比增长6.3%，制造业GDP同比增长5.7%，批发和零售业GDP同比增长5.5%。初步核算，第一产业、第二产业、第三产业全年GDP分别为6.47万亿元、36.60万亿元、46.96万亿元。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/b35d85ce8d1a62b79b08ae6725f72c86.jpg" />
+2.1月22日，国家新闻出版广电总局网站显示，第三批游版号已经下发，总数为93个，审批时间为1月7日。其中，腾讯、网易两大游戏公司在此次版号下发名单中继续缺席。据悉，自游戏版号审批重启至今，已经有257款游戏取得版号，上述两家游戏公司仍未获得版号。
+<img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/498a7e92c7997b89f299da2292264e75.jpg" />
+3.1月22日，上海市统计局发布，初步核算，2018年全市生产总值完成32679.87亿元，按可比价格计算，比上年增长6.6%。上海全市经济社会发展总体平稳、稳中有进、稳中向好，经济发展的韧性、活力和包容性增强，高质量发展态势显现。2018年，上海第一产业增加值104.37亿元，下降6.9%；第二产业增加值9732.54亿元，增长1.8%；第三产业增加值22842.96亿元，增长8.7%。第三产业增加值占全市生产总值的比重为69.9%，比上年提高0.7个百分点。吸引外资成为一大亮点。
+4.1月22日起，海口市交通运输和港航管理局停止为燃油车办理《网络预约出租汽车运输证》许可业务。海口新增或更换的网约车将100%使用清洁能源车辆。
 短期反弹行情的持续性和高度取决于分子（盈利）和分母（利率）的相对变化。在当前估值历史底部（决定了下行空间已经十分有限）、近期基本面数据真空（分子相对固定）、无风险利率快速下行（宽信用尚未出现、资金留存在金融体系内、风险偏好上升）的时间窗口里，短期反弹的春季躁动行情是值得期待的。
-<img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/d4f1f8d8e3c712a60b570d6251b34eb4.jpg" />
 市场预期将会存在着反复，风险偏好也仅是有限提升。从行业配置选择方面看，一方面投资者仍应高度重视配置板块防御属性，重点关注金融地产低估值龙头，公用事业、黄金、必需消费品以及高股息个股等领域，另一方面是在市场风险偏好提升过程中，弹性更好的板块。一是周期涨价品，重点关注煤炭、钢铁、有色等流动性敏感板块，以及化工高景气细分子领域，二是稳增长与经济转型交叉领域的新基建板块，后续有望成为产业政策支持催化重点，重点关注5G、人工智能、工业互联网、物联网。
  
  
