--- a/source/_posts/钱图|2018年北上资金净流入A股2942亿，还有更多外资要来A？.md
+++ b/source/_posts/钱图|2018年北上资金净流入A股2942亿，还有更多外资要来A？.md
@@ -1,5 +1,5 @@
 ---
-title: 2018年北上资金净流入A股2942亿，还有更多外资要来A？
+title: 钱图|2018年北上资金净流入A股2942亿，还有更多外资要来A？
 author: wetech
 date: 2019-01-22 17:51:03
 tags: 
