--- a/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
+++ b/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
@@ -12,15 +12,19 @@ categories:
 朗新科技公告，公司于2019年1月22日收到中国证监会出具的《中国证监会行政许可申请受理单》。中国证监会对公司提交的《上市公司发行股份购买资产核准》行政许可申请材料进行了审查，认为该申请材料齐全，符合法定形式，决定对该行政许可申请予以受理。
 科力远公告，证监会并购重组委将于1月23日召开工作会议，审核公司发行股份购买资产暨关联交易事项。公司股票将自1月23日起停牌。
 千金药业披露业绩快报，公司2018年实现营业总收入33.33亿元，同比增长4.72%；净利润2.55亿元，同比增长22.56%。基本每股收益0.61元。
+成都银行披露业绩快报，公司2018年实现营业收入115.18亿元，同比增长19.31%；净利润46.49亿元，同比增长18.93%。基本每股收益1.30元。截至 2018年末，不良贷款率1.54%，较年初下降0.15个百分点。
+广百股份披露2018年度业绩快报，实现营收76.14亿元，同比增长10.51%；实现净利2.01亿元，同比增长15.62%；基本每股收益0.59元。
 张家港行披露2018年度业绩快报，实现营收29.92亿元，同比增长23.94%；实现净利8.36亿元，同比增长9.57%；基本每股收益0.46元。
 沙河股份披露2018年度业绩预告，预盈1.44亿元至1.46亿元，同比增长1787.29%—1813.5%。公司2018年度确认深圳市南山区鹤塘小区沙河商城城市更新项目中部分回迁物业的货币补偿收入1.86亿元，该收入属于非经常性损益。
 丰乐种业披露2018年度业绩预告，预盈5000万元–6000万元，同比增长328.90%－414.69%。业绩增长主要因公司销售量大于上年同期，销售收入和利润同比增长。
+东方电缆公告，预计2018年的净利润为1.7亿元左右，同比增加约240%。2018年，公司大力开拓海洋新能源等高端产品市场，陆续交付了多个重大海缆订单。预计2018年主营业务收入同比增长约45%，产品结构中毛利率较高的海洋缆产品比重快速提升，约占主营业务收入的35%。公司在海上风电领域的市场份额逐步增加，同时核心技术成果转化所带来的经济效益明显显现。
 雪峰科技公告，预计2018年的净利润同比将增加170.19%左右。公司上年同期盈利1846万元。
 理邦仪器披露2018年度业绩预告，预盈1.03亿元至1.16亿元，同比增长135%—165%。报告期内公司进一步加大国内外市场的开发力度，持续挖掘各细分市场潜力，使得各产线业务均保持稳定增长。
 春兰股份公告，预计2018年的净利润为3700万元到4200万元，同比增加109.77%到138.12%。
 巨化股份公告，预计2018年实现的净利润与上年同期相比，将增加10.6亿元到12.7亿元，同比增加113%到136%。本期公司所处行业处于较高景气区间，产品和原材料价格同比上期均有所上升。
 河钢股份披露2018年度业绩预告，预盈34.5亿元至37亿元，同比增长89.87%～103.63%。2018年度，钢材市场环境较上年同期好转、钢材价格上升。
 天通股份公告，预计2018年度实现的净利润约为2.82亿元-3.06亿元，同比增长80%-95%。
+南威软件公告，预计2018年的净利润为1.72亿元到2亿元，同比增加66.95%到94.13%。2018年因营业收入的增长以及软硬件产品销售结构变化，软件产品销售占比上升，产品销售综合毛利率增长，同时公司合理有效控制成本与费用，净利润实现较大增长。
 卧龙地产公告，预计2018年实现的净利润与上年同期相比将增加约 2.45亿元，同比增加78%左右。公司上年同期盈利3.15亿元。
 全筑股份公告，预计2018年实现的净利润为2.55亿元-2.75亿元，同比增长54.77%-66.91%。报告期内，公司公装业务较去年同期增长40%以上，致使公司净利润有较大幅度的增长。
 鞍钢股份披露2018年度业绩预告，预盈78亿元，上年同期盈利66.38亿元。2018年，公司围绕“效率、质量、变革”开展一系列工作，实现利润创历史新高。
@@ -35,16 +39,19 @@ categories:
 上海电力公告，公司控股股东国家电投集团的一致行动人国家电投集团财务公司计划未来6个月内增持公司股份，增持金额不少于3000万元，不超过1亿元。
 天鹅股份公告，持股9.10%的股东新疆古月杨计划减持不超过540万股，占公司总股本的5.79%。其中通过集中竞价方式减持不超过180万股，于公告日起15个交易日后的6个月内进行。
 双林股份公告，持公司5.64%股权的股东龚雨飞，计划15个交易日后的6个月内减持不超过公司总股本2%的股权。
+绿色动力公告，公司拟通过支付现金的方式收购贵州金沙绿色能源有限公司100%股权，收购价格为6811.54万元。本次收购将提升公司生活垃圾焚烧发电业务规模，扩大市场占有率。
+中央商场公告，1月22日接到祝义财家属通知，公司实控人祝义财已回到家中。祝义财为公司实控人，目前未在公司担任职务，公司经营情况一切正常。
 万达信息公告，公司于2019年1月22日收到中国证监会批复，核准公司向社会公开发行面值总额12亿元可转换公司债券，期限6年。
 桐昆股份公告，2018年12月14日—2019年1月21日间，控股股东桐昆控股出售其所持有的桐昆转债1972660张，占发行总量的5.19%；其一致行动人盛隆投资出售其所持有的桐昆转债1243190张，占发行总量的3.27%；一致行动人陈士良出售其所持有的桐昆转债584150张，占发行总量的1.54%；桐昆控股及其一致行动人合计出售桐昆转债3800000张，占发行总量的10%。桐昆控股及其一致行动人现仍合计持有桐昆转债5418610张，占发行总量的14.26%。
 ST慧球公告，公司原定于1月30日披露2018年年报，但因年报编制及相关审计工作尚未完成，经申请，年报披露时间将延期至3月6日。
+奥瑞德公告，公司近日通过中国执行信息公开网公示信息查询，获悉公司及公司全资子公司奥瑞德有限、公司控股股东左洪波、褚淑霞被武汉市中级人民法院列入失信被执行人名单。目前公司正在积极协商妥善的解决办法，努力达成债务和解方案，全力筹措偿债资金，努力申请免除或减少由此形成的违约金、滞纳金和罚息等。
+海航创新公告，公司收到湖南省高级人民法院发来的传票及湖南信托递交湖南省高院的民事起诉状，湖南信托请求判令公司偿还借款2.57亿元并支付逾期还款的罚息71万元，公司控股股东海航旅游及海航实业承担连带清偿责任。湖南省高院已受理了上述案件，并将于2月21日开庭审理。
 同济科技公告，控股子公司上海同济建设有限公司中标漕河泾开发区赵巷园区二期项目（C05-03地块）工程，中标价格7.82亿元。
 丰原药业公告，公司全资子公司淮南泰复制药有限公司，于近日收到安徽省药品监督管理局颁发的《药品GMP证书》，认证范围为干混悬剂（青霉素类）。
 天圣制药公告，全资子公司湖南天圣药业有限公司，收到国家药品监督管理局核准签发的注射用氟氯西林钠（0.5g、1.0g）《药品注册批件》。长远来看，该产品的获批将对公司业绩有积极的影响。
 大众交通公告，公司投资3000万元认购由秋晟资产作为基金管理人、中信证券作为基金托管人的秋晟资产言蹊1号私募基金。
 云天化公告，全资子公司水富云天化年产50万吨合成氨装置、年产80万吨尿素装置因供气单位暂停天然气供应于2018年12月11日起暂时停产。近日，供气单位已恢复对水富云天化的天然气供应，水富云天化合成氨、尿素产品生产装置已恢复生产，目前，生产经营情况正常。经初步测算，此次停产减少公司2018年净利润1332万元左右，减少2019年净利润1466万元左右。
 以岭药业公告，全资子公司北京以岭药业有限公司生产的专利产品——参松养心胶囊以其治疗心律失常的卓越疗效被收录《心律失常合理用药指南》第2版,成为新指南推荐中成药。2018年1-9月该产品实现营业收入9.58亿元,占公司营业收入的25.07%。
-中央商场公告，1月22日接到祝义财家属通知，公司实控人祝义财已回到家中。祝义财为公司实控人，目前未在公司担任职务，公司经营情况一切正常。
  
  
 1月21日晚间，沪深两市多家上市公司发布公告，以下是重要公告摘要，供投资者参考。
